--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -221,11 +221,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Мовы праграмы"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Задаць мову для кожнай праграмы"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Мова праграмы"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Абнавіце праграму"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Каб дадаць у праграму новыя даступныя мовы, яе трэба абнавіць"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Абнавіць"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Прапанаваныя мовы"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Усе мовы"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Сістэмная мова"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Стандартная сістэмная – <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Для праграмы нельга задаць некалькі моў. Для яе зададзена наступная стандартная мова: <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Выбар мовы для гэтай праграмы недаступны ў Наладах."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Мову для гэтай праграмы нельга выбраць у Наладах."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Выдаліць выбраныя мовы?</item>
       <item quantity="few">Выдаліць выбраныя мовы?</item>
@@ -462,6 +466,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Вы і ваша дзіця можаце ў любы час выдаліць відарысы і мадэль адбітка пальца ці выключыць разблакіраванне адбіткам пальца ў Наладах. Відарысы і мадэлі адбіткаў пальца будуць захоўвацца на тэлефоне, пакуль іх не выдаляць."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Ваш тэлефон можа быць разблакіраваны без вашага намеру, напрыклад, калі хтосьці паднясе яго да вашага пальца."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Тэлефон можна разблакіраваць, нават калі дзіця не збіралася гэта рабіць, напрыклад, калі хтосьці прыкладзе палец дзіцяці да тэлефона."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Каб атрымліваць найлепшыя вынікі, карыстайцеся ахоўнай плёнкай, якая мае сертыфікат \"Made for Google\". Калі выкарыстоўваць іншыя ахоўныя плёнкі, сканер адбіткаў пальцаў можа не працаваць."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Каб атрымліваць найлепшыя вынікі, карыстайцеся ахоўнай плёнкай, якая мае сертыфікат \"Made for Google\". Калі выкарыстоўваць іншыя ахоўныя плёнкі, сканер адбіткаў пальцаў вашага дзіцяці можа не працаваць."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Кожны раз крыху мяняйце пазіцыю пальца"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Накрыйце значок падушачкай пальца"</string>
@@ -515,7 +521,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Дакраніцеся некалькі разоў, каб адбітак быў больш дакладны"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Кожны раз падчас руху значка адбітка пальца ўтрымлівайце палец націснутым. Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Прыкладзіце да датчыка кончык пальца"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Зараз прыкладзіце краі пальца"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Прыкладзіце палец левым краем"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Прыкладзіце палец правым краем"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Прыкладзіце палец да датчыка адным бокам і ўтрымлівайце яго, потым павярніце іншым бокам"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца"</string>
     <!-- String.format failed for translation -->
@@ -1951,8 +1958,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Ліцэнзіі абнаўлення сістэмы Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Умовы выкарыстання"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Сістэмная ліцэнзія WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Звесткі пра шпалеры"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Спадарожнікавыя фота:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Кіраўніцтва"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Не атрымлiваецца загрузіць кіраўніцтва."</string>
@@ -2107,8 +2113,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Уключанае"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Ачысціць сховішча"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Выдаліць абнаўленні"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Дазволіць абмежаваныя налады"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некаторыя выбраныя вамі дзеянні стандартна адкрываюцца ў гэтай праграме."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Вы дазволілі гэтаму дадатку ствараць віджэты і атрымліваць доступ да іх даных."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Стандартныя налады не зададзены"</string>
@@ -2143,9 +2148,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Унутраная памяць"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Пераразлік памеру..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Выдаліць даныя праграмы?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Даныя гэтай праграмы (файлы, налады, базы даных і г. д.)  будуць выдалены назаўсёды."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Даныя гэтай праграмы, у тым ліку файлы і налады, будуць канчаткова выдалены з гэтай прылады"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ОК"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Скасаваць"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Выдаліць"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Дадатак не знойдзены ў спісе ўсталяваных дадаткаў."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Немагчыма ачысціць сховішча для праграмы."</string>
@@ -3464,8 +3470,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Не наладжана – Рабочы профіль"</string>
     <string name="user_admin" msgid="4024553191395768119">"Адміністратар"</string>
     <string name="user_you" msgid="3070562015202859996">"Вы (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Вы больш не можаце дадаваць карыстальнікаў. Выдаліце аднаго з карыстальнікаў, каб дадаць новага."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Толькі ўладальнік планшэта можа кіраваць карыстальнікамі."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Толькі ўладальнік тэлефона можа кіраваць карыстальнікамі."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Уладальнiкi профіляў з абмежаваннямi не могуць дадаваць уліковыя запісы"</string>
@@ -4529,12 +4534,9 @@
       <item quantity="many"><xliff:g id="COUNT_1">%d</xliff:g> праграм не выкарыстоўваюцца</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> праграмы не выкарыстоўваецца</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Налады праграм, якія не выкарыстоўваліся"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Прыпыніць дзеянні ў неактыўнай праграме"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Выдаліць дазволы, часовыя файлы і спыніць апавяшчэнні"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Усе праграмы"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Усталяваныя праграмы"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Імгненныя праграмы"</string>
@@ -5228,10 +5230,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Гэта прылада знаходзіцца пад кіраваннем <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Даведацца больш"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Абмежаваная налада"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Для праграмы \"<xliff:g id="APP_NAME">%s</xliff:g>\" дазволены абмежаваныя налады"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"У мэтах бяспекі гэта налада цяпер недаступная."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Інфармацыя пра прафінансаваную прыладу"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Кампанія-крэдытор можа змяніць налады гэтай прылады і ўсталяваць на яе пэўнае ПЗ.\n\nКалі вы прапусціце плацеж, ваша прылада будзе заблакіравана.\n\nКаб даведацца больш, звярніцеся да кампаніі-крэдытора."</string>
@@ -5728,6 +5728,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Паказваць на экране блакіроўкі налады знешніх прылад"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Кіраванне з заблакіраванай прылады"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Дзякуючы праграме для кіравання прыладамі вы можаце кіраваць знешнімі прыладамі праз заблакіраваны тэлефон ці планшэт"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Спачатку ўключыце \"Паказваць элементы кіравання прыладамі\""</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Паказваць двухрадковы дысплэй гадзінніка, калі ён даступны"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Двухрадковы дысплэй гадзінніка"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5745,10 +5746,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Бестэрміновая арэнда."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Дазволіць экранныя накладкі на Налады"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Дазвольце праграмам, якія могуць паказвацца паверх іншых, накладацца на экраны Налад"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Дазволіць фіктыўны мадэм"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Дазвольце гэтай прыладзе запускаць паслугу фіктыўнага мадэма для тэсціравання апаратуры. Не ўключайце гэту функцыю падчас звычайнага выкарыстання тэлефона"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Мультымедыя"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Замацаваць медыяпрайгравальнік"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Каб хутка ўзнавіць прайграванне, медыяпрайгравальнік застаецца адкрытым у хуткіх наладах"</string>
@@ -5834,8 +5833,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Выкарыстоўваць замацаванне праграмы"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Выкарыстоўваць параметры распрацоўшчыка"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Скарыстаць сэрвіс друку"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Дазволіць некалькі карыстальнікаў"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Выкарыстоўваць адладку па Wi-Fi"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Выкарыстоўваць налады драйвера графічнай сістэмы"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Выкарыстоўваць рэжым эканоміі зараду"</string>
@@ -5901,12 +5899,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Мадыфікатары"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Дзеянні (кошт вытворчасці)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Дзеянні (базісная цана)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Бонусы за адзінкавую падзею"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Бонусы за агульную працягласць падзеі"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Максімальная колькасць бонусаў у дзень"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Найвышэйшая актыўнасць"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Апавяшчэнне прагледжана"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Апавяшчэнне прагледжана на працягу 15 хв"</string>
@@ -5937,20 +5932,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Прагледзець"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Выберыце экранную застаўку"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Паказваць дадатковую інфармацыю"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Паказ на экраннай застаўцы часу, даты, інфармацыі пра надвор\'е і якасць паветра, а таксама звестак пра трансляцыю"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Дадатковыя налады"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Выберыце экранную застаўку"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Выберыце змесціва, якое будзе паказвацца на экране, калі планшэт падключаны да док-станцыі. Пры выкарыстанні экраннай застаўкі прылада можа спажываць больш энергіі."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Наладзіць"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Каб уключыць падтрымку адвольнай формы, патрабуецца перазагрузка."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Каб прымусова ўключыць на дадатковых дысплэях рэжым працоўнага стала, патрабуецца перазагрузка."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Перазагрузіць зараз"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Перазагрузіць пазней"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Прасторавае гучанне"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Гук з сумяшчальных мультымедыйных прылад стварае больш глыбокі эфект прысутнасці"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Адсочванне рухаў галавы"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Калі вы рухаеце галавой, гук змяняецца. Дзякуючы гэтаму вы чуеце больш натуральнае гучанне"</string>
