--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ಆ್ಯಪ್ ಭಾಷೆಗಳು"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ಪ್ರತಿ ಆ್ಯಪ್‌ಗಾಗಿ ಭಾಷೆಯನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ಆ್ಯಪ್ ಭಾಷೆ"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ಆ್ಯಪ್ ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡಿ"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ಲಭ್ಯವಿರುವ ಇತ್ತೀಚಿನ ಭಾಷೆಗಳಿಗಾಗಿ ಆ್ಯಪ್ ಅನ್ನು ನೀವು ಅಪ್‌ಡೇಟ್ ಮಾಡಬೇಕಾಗಿದೆ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ಈಗಲೇ ಅಪ್‌ಡೇಟ್ ಮಾಡಿ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ಸೂಚಿಸಿರುವ ಭಾಷೆಗಳು"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ಎಲ್ಲಾ ಭಾಷೆಗಳು"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ಸಿಸ್ಟಂ ಭಾಷೆ"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"ಸಿಸ್ಟಂ ಡೀಫಾಲ್ಟ್ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"ಈ ಆ್ಯಪ್ ಅನ್ನು ಡೀಫಾಲ್ಟ್ ಆಗಿ <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ಭಾಷೆಗೆ ಸೆಟ್ ಮಾಡಲಾಗಿದೆ ಹಾಗೂ ಇದು ಬಹು ಭಾಷೆಗಳನ್ನು ಬೆಂಬಲಿಸುವುದಿಲ್ಲ."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಮೂಲಕ ಈ ಆ್ಯಪ್‌ಗಾಗಿ ಭಾಷೆಯ ಆಯ್ಕೆಯು ಲಭ್ಯವಿಲ್ಲ."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಮೂಲಕ ಈ ಆ್ಯಪ್‌ಗಾಗಿ ನೀವು ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">ಆಯ್ಕೆಮಾಡಿದ ಭಾಷೆಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?</item>
       <item quantity="other">ಆಯ್ಕೆಮಾಡಿದ ಭಾಷೆಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?</item>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ ಯಾವಾಗ ಬೇಕಾದರೂ ಅವರ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್ ಅನ್ನು ನೀವು ಮತ್ತು ನಿಮ್ಮ ಮಗು ಅಳಿಸಬಹುದು ಅಥವಾ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಅನ್‌ಲಾಕ್ ಅನ್ನು ಆಫ್ ಮಾಡಬಹುದು. ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್‌ಗಳನ್ನು ಅವರು ಅಳಿಸುವವರೆಗೆ, ಫೋನ್‌ನಲ್ಲಿ ಸಂಗ್ರಹಿಸಲಾಗುತ್ತದೆ."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ನಿಮಗೆ ಬೇಕಿಲ್ಲದಿರುವಾಗಲೂ ನಿಮ್ಮ ಫೋನ್ ಅನ್‌ಲಾಕ್ ಆಗಬಹುದು, ಉದಾಹರಣೆಗೆ ಯಾರೋ ಒಬ್ಬರು ಫೋನ್ ಅನ್ನು ನಿಮ್ಮ ಬೆರಳಿಗೆ ಸ್ಪರ್ಶಿಸಿದಾಗ ಇತ್ಯಾದಿ."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ಅವರಿಗೆ ಬೇಕಿಲ್ಲದಿರುವಾಗಲೂ ನಿಮ್ಮ ಮಗುವಿನ ಫೋನ್ ಅನ್‌ಲಾಕ್ ಆಗಬಹುದು, ಉದಾಹರಣೆಗೆ ಯಾರೋ ಒಬ್ಬರು ಫೋನ್ ಅನ್ನು ಅವರ ಬೆರಳಿಗೆ ಸ್ಪರ್ಶಿಸಿದಾಗ ಇತ್ಯಾದಿ."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ಉತ್ತಮ ಫಲಿತಾಂಶಗಳಿಗಾಗಿ, Google ಗಾಗಿ ತಯಾರಿಸಲಾಗಿದೆ ಎಂದು ಪ್ರಮಾಣೀಕರಿಸಿದ ಸ್ಕ್ರೀನ್ ಗಾರ್ಡ್ ಅನ್ನು ಬಳಸಿ. ಇತರ ಸ್ಕ್ರೀನ್ ಗಾರ್ಡ್‌ಗಳನ್ನು ಬಳಸಿದರೆ ನಿಮ್ಮ ಫಿಂಗರ್ ಪ್ರಿಂಟ್ ಸರಿಯಾಗಿ ಕಾರ್ಯನಿರ್ವಹಿಸದೇ ಇರಬಹುದು."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ಉತ್ತಮ ಫಲಿತಾಂಶಗಳಿಗಾಗಿ, Google ಗಾಗಿ ತಯಾರಿಸಲಾಗಿದೆ ಎಂದು ಪ್ರಮಾಣೀಕರಿಸಿದ ಸ್ಕ್ರೀನ್ ಗಾರ್ಡ್ ಅನ್ನು ಬಳಸಿ. ಇತರ ಸ್ಕ್ರೀನ್ ಗಾರ್ಡ್‌ಗಳನ್ನು ಬಳಸಿದರೆ ನಿಮ್ಮ ಮಗುವಿನ ಫಿಂಗರ್ ಪ್ರಿಂಟ್ ಸರಿಯಾಗಿ ಕಾರ್ಯನಿರ್ವಹಿಸದೇ ಇರಬಹುದು."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ಪ್ರತಿ ಬಾರಿಯೂ ನಿಮ್ಮ ಬೆರಳಿನ ಸ್ಥಾನವನ್ನು ನಿಧಾನವಾಗಿ ಬದಲಾಯಿಸಿ"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್‌ನ ಮಧ್ಯಭಾಗವನ್ನು ಐಕಾನ್ ಮೇಲೆ ಇರಿಸಿ"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್‌ನ ವಿವಿಧ ಭಾಗಗಳನ್ನು ಸೇರಿಸಲು ನಿಮ್ಮ ಬೆರಳನ್ನು ಎತ್ತುತ್ತಲಿರಿ"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ಫಿಂಗರ್‌ ಪ್ರಿಂಟ್ ಐಕಾನ್ ಸರಿಸಿದ ಪ್ರತಿಬಾರಿಯೂ ಸ್ಪರ್ಶಿಸಿ ಮತ್ತು ಹಿಡಿದುಕೊಳ್ಳಿ. ಇದು ನಿಮ್ಮ ಫಿಂಗರ್‌ ಪ್ರಿಂಟ್ ಕುರಿತು ಇನ್ನಷ್ಟು ಮಾಹಿತಿಯನ್ನು ಕ್ಯಾಪ್ಚರ್ ಮಾಡಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ಸೆನ್ಸರ್ ಮೇಲೆ ನಿಮ್ಮ ಬೆರಳ ತುದಿಯನ್ನು ಇರಿಸಿ"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ಅಂತಿಮವಾಗಿ, ನಿಮ್ಮ ಬೆರಳ ತುದಿಗಳನ್ನು ಬಳಸಿ"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ನಿಮ್ಮ ಬೆರಳಿನ ಎಡ ಅಂಚನ್ನು ಇರಿಸಿ"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ನಿಮ್ಮ ಬೆರಳಿನ ಬಲ ಅಂಚನ್ನು ಇರಿಸಿ"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ಸೆನ್ಸರ್ ಮೇಲೆ ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್‌ನ ಒಂದು ಬದಿಯನ್ನು ಇರಿಸಿ ಮತ್ತು ಹಿಡಿದುಕೊಳ್ಳಿ, ನಂತರ ಇನ್ನೊಂದು ಬದಿಗೆ ಬದಲಿಸಿ"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ಇದು ನಿಮ್ಮ ಫಿಂಗರ್‌ ಪ್ರಿಂಟ್ ಕುರಿತು ಇನ್ನಷ್ಟು ಮಾಹಿತಿಯನ್ನು ಕ್ಯಾಪ್ಚರ್ ಮಾಡಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ನೋಂದಣಿ ಶೇಕಡಾ <xliff:g id="PERCENTAGE">%d</xliff:g> ಆಗಿದೆ"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ಸಿಸ್ಟಂ ಅಪ್‌ಡೇಟ್‌ ಪರವಾನಗಿಗಳು"</string>
     <string name="terms_title" msgid="2071742973672326073">"ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳು"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ಸಿಸ್ಟಂ ವೆಬ್‌ವೀಕ್ಷಣೆ ಪರವಾನಗಿ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ವಾಲ್‌ಪೇಪರ್ ಕ್ರೆಡಿಟ್‌ಗಳು"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ಉಪಗ್ರಹ ಚಿತ್ರಣ ಪೂರೈಕೆದಾರರು:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ಹಸ್ತಚಾಲಿತ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ಹಸ್ತಚಾಲಿತವಾಗಿ ಲೋಡ್ ಮಾಡುವಲ್ಲಿ ಸಮಸ್ಯೆ ಕಂಡುಬಂದಿದೆ."</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"ಸಕ್ರಿಯಗೊಳಿಸು"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ಸಂಗ್ರಹಣೆಯನ್ನು ತೆರವುಗೊಳಿಸಿ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ನವೀಕರಣಗಳನ್ನು ಅನ್‌ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿ"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"ನಿರ್ಬಂಧಿಸಲಾದ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ನೀವು ಆಯ್ಕೆ ಮಾಡಿದ ಕೆಲವು ಚಟುವಟಿಕೆಗಳು ಡಿಫಾಲ್ಟ್ ಆಗಿ ಈ ಆ್ಯಪ್‌ನಲ್ಲಿ ತೆರೆಯುತ್ತವೆ."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ಈ ಅಪ್ಲಿಕೇಶನ್‌ ಅನ್ನು ಅನುಮತಿಸಲು ನೀವು ವಿಜೆಟ್‌ಗಳನ್ನು ರಚಿಸಲು ಮತ್ತು ಅವುಗಳ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲು ಆಯ್ಕೆಮಾಡಿಕೊಂಡಿರುವಿರಿ."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"ಡೀಫಾಲ್ಟ್‌ಗಳನ್ನು ಹೊಂದಿಸಲಾಗಿಲ್ಲ."</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆ"</string>
     <string name="recompute_size" msgid="1098091228370999128">"ಗಾತ್ರವನ್ನು ಮರುಗಣನೆ ಮಾಡಲಾಗುತ್ತಿದೆ…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"ಆ್ಯಪ್ ಡೇಟಾ ಅಳಿಸಬೇಕೇ?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ಈ ಆ್ಯಪ್‌ನ ಡೇಟಾವನ್ನು ಶಾಶ್ವತವಾಗಿ ಅಳಿಸಲಾಗುವುದು. ಇದು ಫೈಲ್‌ಗಳು, ಸೆಟ್ಟಿಂಗ್‌ಗಳು, ಡೇಟಾಬೇಸ್‌ಗಳು ಮತ್ತು ಇತರ ಆ್ಯಪ್ ಡೇಟಾ ಒಳಗೊಂಡಿದೆ."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ಫೈಲ್‌ಗಳು ಮತ್ತು ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಸೇರಿದಂತೆ ಈ ಆ್ಯಪ್‌ನ ಡೇಟಾವನ್ನು ಈ ಸಾಧನದಿಂದ ಶಾಶ್ವತವಾಗಿ ಅಳಿಸಲಾಗುತ್ತದೆ"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ಸರಿ"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"ರದ್ದುಮಾಡಿ"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ಅಳಿಸಿ"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ಸ್ಥಾಪಿಸಲಾಗಿರುವ ಅಪ್ಲಿಕೇಶನ್‍ಗಳ ಪಟ್ಟಿಯಲ್ಲಿ ಅಪ್ಲಿಕೇಶನ್ ಕಂಡುಬಂದಿಲ್ಲ."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ಅಪ್ಲಿಕೇಶನ್‌ಗಾಗಿ ಸಂಗ್ರಹಣೆಯನ್ನು ತೆರವುಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
@@ -4401,8 +4407,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> ಬಳಕೆಯಾಗದ ಆ್ಯಪ್‌ಗಳು</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ಬಳಕೆಯಾಗದಿರುವ ಆ್ಯಪ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"ಆ್ಯಪ್‌ನ ಚಟುವಟಿಕೆಯನ್ನು ವಿರಾಮಗೊಳಿಸಿ"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಿ, ತಾತ್ಕಾಲಿಕ ಫೈಲ್‌ಗಳನ್ನು ಅಳಿಸಿ ಮತ್ತು ಬಳಕೆಯಾಗಿರದಿದ್ದರೆ ಅಧಿಸೂಚನೆಗಳನ್ನು ನಿಲ್ಲಿಸಿ"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ಬಳಸದಿದ್ದರೆ, ಆ್ಯಪ್‌ನ ಚಟುವಟಿಕೆಯನ್ನು ವಿರಾಮಗೊಳಿಸಿ"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಿ, ತಾತ್ಕಾಲಿಕ ಫೈಲ್‌ಗಳನ್ನು ಅಳಿಸಿ ಹಾಗೂ ಅಧಿಸೂಚನೆಗಳನ್ನು ನಿಲ್ಲಿಸಿ"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ಎಲ್ಲಾ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ಸ್ಥಾಪಿಸಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ಇನ್‌ಸ್ಟಂಟ್ ಆ್ಯಪ್‌ಗಳು"</string>
@@ -5058,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ಈ ಸಾಧನವನ್ನು <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ನಿರ್ವಹಿಸುತ್ತಿದೆ."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"ನಿರ್ಬಂಧಿಸಲಾದ ಸೆಟ್ಟಿಂಗ್"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> ಗಾಗಿ ನಿರ್ಬಂಧಿಸಲಾದ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ನಿಮ್ಮ ಸುರಕ್ಷತೆಗಾಗಿ ಈ ಸೆಟ್ಟಿಂಗ್ ಪ್ರಸ್ತುತ ಲಭ್ಯವಿಲ್ಲ."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ಸಾಲ ಪಡೆದು ಖರೀದಿಸಿದ ಸಾಧನದ ಮಾಹಿತಿ"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ನಿಮಗೆ ಕ್ರೆಡಿಟ್ ಒದಗಿಸುವವರು ಈ ಸಾಧನದಲ್ಲಿ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಬದಲಾಯಿಸಬಹುದು ಮತ್ತು ಸಾಫ್ಟ್‌ವೇರ್ ಅನ್ನು ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಬಹುದು.\n\nನೀವು ಕಂತನ್ನು ಪಾವತಿಸಲು ಮರೆತರೆ, ನಿಮ್ಮ ಸಾಧನವನ್ನು ಲಾಕ್ ಮಾಡಲಾಗುತ್ತದೆ.\n\nಇನ್ನಷ್ಟು ತಿಳಿಯಲು, ನಿಮಗೆ ಕ್ರೆಡಿಟ್ ಒದಗಿಸುವವರನ್ನು ಸಂಪರ್ಕಿಸಿ."</string>
@@ -5544,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ಲಾಕ್ ಸ್ಚ್ರೀನ್ ಮೂಲಕ ಬಾಹ್ಯ ಸಾಧನಗಳಿಗಾಗಿ ಕಂಟ್ರೋಲ್‌ಗಳನ್ನು ತೋರಿಸಿ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ಲಾಕ್ ಮಾಡಿದ ಸಾಧನದಿಂದ ನಿಯಂತ್ರಣ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ಸಾಧನ ನಿಯಂತ್ರಣಗಳ ಆ್ಯಪ್ ಅನುಮತಿಸಿದರೆ ನಿಮ್ಮ ಫೋನ್ ಅಥವಾ ಟ್ಯಾಬ್ಲೆಟ್ ಅನ್ನು ಅನ್‌ಲಾಕ್ ಮಾಡದೆಯೇ ಬಾಹ್ಯ ಸಾಧನಗಳನ್ನು ನಿಯಂತ್ರಿಸಿ"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ಅದನ್ನು ಬಳಸಲು, \"ಸಾಧನ ನಿಯಂತ್ರಣಗಳನ್ನು ತೋರಿಸಿ\" ಎಂಬುದನ್ನು ಮೊದಲು ಆನ್ ಮಾಡಿ"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ಲಭ್ಯವಿದ್ದಾಗ ಡಬಲ್ ಲೈನ್ ಗಡಿಯಾರವನ್ನು ತೋರಿಸಿ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ಡಬಲ್ ಲೈನ್ ಗಡಿಯಾರ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
