--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"এপৰ ভাষা"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"প্ৰতিটো এপৰ বাবে ভাষাটো ছেট কৰক"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"এপৰ ভাষা"</string>
+    <string name="warnings_title" msgid="613849105118598110">"এপ্‌টো আপডে’ট কৰক"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"শেহতীয়াকৈ উপলব্ধ হোৱা ভাষাসমূহৰ বাবে আপুনি এপ্‌টো আপডে’ট কৰিব লাগিব"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"এতিয়াই আপডে’ট কৰক"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"পৰামৰ্শ হিচাপে পোৱা ভাষা"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"আটাইবোৰ ভাষা"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ছিষ্টেমৰ ভাষা"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"ছিষ্টেম ডিফ’ল্ট - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"এপ্‌টোত ডিফ’ল্ট হিচাপে <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ছেট কৰা হৈছে আৰু একাধিক ভাষা সমৰ্থন নকৰে।"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"এই এপ্‌টোৰ বাবে ছেটিঙৰ পৰা ভাষা বাছনি কৰাৰ সুবিধা উপলব্ধ নহয়।"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"আপুনি এই এপ্‌টোৰ বাবে ছেটিঙৰ পৰা ভাষা বাছনি কৰিব নোৱাৰে।"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">বাছনি কৰা ভাষাসমূহ আঁতৰাবনে?</item>
       <item quantity="other">বাছনি কৰা ভাষাসমূহ আঁতৰাবনে?</item>
@@ -253,7 +257,7 @@
     <string name="settings_label" msgid="943294133671632976">"ছেটিং"</string>
     <string name="settings_label_launcher" msgid="820982375501978609">"ছেটিং"</string>
     <string name="settings_shortcut" msgid="8548239727871847171">"ছেটিঙৰ শ্বৰ্টকাট"</string>
-    <string name="airplane_mode" msgid="3196085857882526817">"এয়াৰপ্লেইন ম\'ড"</string>
+    <string name="airplane_mode" msgid="3196085857882526817">"এয়াৰপ্লে’ন ম’ড"</string>
     <string name="wireless_networks_settings_title" msgid="8557542379234105369">"বেতাঁৰ আৰু নেটৱৰ্কসমূহ"</string>
     <string name="radio_controls_summary" msgid="9028430178697624501">"ৱাই-ফাই, ব্লুটুথ, এয়াৰপ্লেন ম\'ড, ম’বাইল নেটৱৰ্ক আৰু ভিপিএনবোৰ পৰিচালনা কৰক"</string>
     <string name="cellular_data_summary" msgid="6551434804367912367">"ম’বাইল নেটৱৰ্কত ডেটা ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
@@ -301,7 +305,7 @@
     <string name="lock_immediately_summary_with_exception" msgid="40819611828339044">"<xliff:g id="TRUST_AGENT_NAME">%1$s</xliff:g>এ আনলক কৰি ৰখা সময়ৰ বাহিৰে, সময় ওকলাৰ লগে লগে"</string>
     <string name="lock_after_timeout_summary_with_exception" msgid="3441806647509073124">"<xliff:g id="TRUST_AGENT_NAME">%2$s</xliff:g>এ আনলক কৰি ৰখা সময়ৰ বাহিৰে সময় ওকলাৰ <xliff:g id="TIMEOUT_STRING">%1$s</xliff:g> পিছত"</string>
     <string name="show_owner_info_on_lockscreen_label" msgid="197365342192696406">"লক স্ক্ৰীনত গৰাকী-বিষয়ক তথ্য দেখুৱাওক"</string>
-    <string name="owner_info_settings_title" msgid="3555626140700093017">"লক স্ক্ৰীনত পাঠ যোগ কৰক"</string>
+    <string name="owner_info_settings_title" msgid="3555626140700093017">"লক স্ক্ৰীনত পাঠ যোগ দিয়ক"</string>
     <string name="security_enable_widgets_title" msgid="676199714313423099">"ৱিজেটসমূহ সক্ষম কৰক"</string>
     <string name="security_enable_widgets_disabled_summary" msgid="5191637768484254146">"প্ৰশাসকৰ দ্বাৰা অক্ষম কৰা হৈছে"</string>
     <string name="trust_lost_locks_screen_title" msgid="4231232144565291276">"বিশ্বাস হেৰুৱালে স্ক্ৰীন লক কৰক"</string>
@@ -330,7 +334,7 @@
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"ডিভাইচ এনক্ৰিপ্ট কৰা হ’ল"</string>
     <string name="not_encrypted_summary" product="tablet" msgid="2374263654698719382">"ডিভাইচ এনক্ৰিপ্ট কৰা নহ’ল"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"লক স্ক্ৰীন"</string>
-    <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"কি কি দেখুওৱাব লাগে"</string>
+    <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"কি দেখুওৱা হ\'ব"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"মোৰ অৱস্থান, স্ক্ৰীন আনলক, ছিম কাৰ্ডৰ লক, ক্ৰিডেনশ্বিয়েল ষ্ট\'ৰেজৰ লক ছেট কৰক"</string>
     <string name="cdma_security_settings_summary" msgid="2455517905101186330">"মোৰ অৱস্থান, স্ক্ৰীন আনলক, ক্ৰিডেনশ্বিয়েল ষ্ট\'ৰেজৰ লক ছেট কৰক"</string>
     <string name="security_passwords_title" msgid="4154420930973818581">"গোপনীয়তা"</string>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"আপুনি আৰু আপোনাৰ শিশুৱে যিকোনো সময়তে ছেটিঙলৈ গৈ তেওঁৰ ফিংগাৰপ্ৰিণ্টৰ প্ৰতিচ্ছবি আৰু মডেলটো মচিব পাৰে অথবা ফিংগাৰপ্ৰিণ্টৰ দ্বাৰা আনলক কৰাৰ সুবিধাটো অফ কৰিব পাৰে। ফিংগাৰপ্ৰিণ্টৰ প্ৰতিচ্ছবি আৰু মডেলসমূহ মচি নেপেলোৱালৈকে ফ’নটোত ষ্ট’ৰ হৈ থাকে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"আপুনি নিবিচাৰিলেও আপোনাৰ ফ’নটো আনলক হ\'ব পাৰে, যেনে কোনোবাই এইটো আপোনাৰ আঙুলিৰ আগত দাঙি ধৰিলে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"তেওঁ নিবিচাৰিলেও আপোনাৰ শিশুৰ ফ’নটো আনলক কৰিব পৰা যায়, যেনে কোনোবাই এইটো তেওঁৰ আঙুলিত লগাই দিলে।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"সকলোতকৈ ভাল ফলাফল পাবলৈ, Made for Google বুলি প্ৰমাণিত এটা স্ক্ৰীনৰ সুৰক্ষা প্ৰদানকাৰী ব্যৱহাৰ কৰক। অন্য স্ক্ৰীনৰ সুৰক্ষা প্ৰদানকাৰীৰ সৈতে আপোনাৰ ফিংগাৰপ্ৰিণ্টে কাম নকৰিব পাৰে।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"সকলোতকৈ ভাল ফলাফল পাবলৈ, Made for Google বুলি প্ৰমাণিত এটা স্ক্ৰীনৰ সুৰক্ষা প্ৰদানকাৰী ব্যৱহাৰ কৰক। অন্য স্ক্ৰীনৰ সুৰক্ষা প্ৰদানকাৰীৰ সৈতে আপোনাৰ শিশুৰ ফিংগাৰপ্ৰিণ্টে কাম নকৰিব পাৰে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"প্ৰতিবাৰতে আপোনাৰ আঙুলিটোৰ স্থান সামান্য সলনি কৰক"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ মাজৰ অংশটোৰে চিহ্নটো ঢাকক"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ সকলো অংশ যোগ কৰিবলৈ আঙুলিটো কেইবাবাৰো উঠাব আৰু পুনৰ লগাব লাগিব"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"প্ৰতিবাৰে ফিংগাৰপ্ৰিণ্টৰ চিহ্নটো লৰচৰ কৰিলে সেইটোত স্পৰ্শ কৰি ধৰি ৰাখক। এইটোৱে আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ অধিক কেপচাৰ কৰাত সহায় কৰে।"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ছেন্সৰটোত আপোনাৰ আঙুলিটোৰ আগ অংশ ৰাখক"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"অৱশেষত, আপোনাৰ আঙুলিটোৰ কাষকেইটা ব্যৱহাৰ কৰক"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"আপোনাৰ আঙুলিৰ বাওঁফালৰ কাষটো ৰাখক"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"আপোনাৰ আঙুলিৰ সোঁফালৰ কাষটো ৰাখক"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ কাষটো ছেন্সৰটোত ৰাখি অলপ সময় ধৰি থাকক, তাৰ পাছত আনটো কাষ ৰাখক"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"এইটোৱে আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ অধিক কেপচাৰ কৰাত সহায় কৰে"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ফিংগাৰপ্ৰিণ্ট <xliff:g id="PERCENTAGE">%d</xliff:g> শতাংশ পঞ্জীয়ন কৰা হ\'ল"</string>
@@ -1361,7 +1368,7 @@
     <string name="auto_rotate_manage_permission_button" msgid="2591146085906382385">"অনুমতি পৰিচালনা কৰক"</string>
     <string name="night_display_title" msgid="8532432776487216581">"ৰাতিৰ পোহৰ"</string>
     <string name="night_display_text" msgid="4789324042428095383">"ৰাতিৰ পোহৰে আপোনাৰ স্ক্ৰীনখন মৌ-বৰণীয়া কৰি তোলে। এই কাৰ্যই আপোনাক স্ক্ৰীনখন চাবলৈ বা কম পোহৰতো পঢ়িবলৈ সুবিধা দিয়ে আৰু ই আপোনাক সহজে টোপনি যোৱাতো সহায় কৰিব পাৰে।"</string>
-    <string name="night_display_auto_mode_title" msgid="5869128421470824381">"সূচী"</string>
+    <string name="night_display_auto_mode_title" msgid="5869128421470824381">"সময়সূচী"</string>
     <string name="night_display_auto_mode_never" msgid="2721729920187175239">"নাই"</string>
     <string name="night_display_auto_mode_custom" msgid="3938791496034086916">"কাষ্টম সময়ত অন হয়"</string>
     <string name="night_display_auto_mode_twilight" msgid="4291855156158833997">"সূৰ্যাস্তৰ পৰা সূৰ্যোদয়লৈ অন হয়"</string>
@@ -1410,7 +1417,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"শোৱাৰ সময়ৰ ম’ডটোৰ ছেটিং"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"স্ক্রীন বন্ধ হোৱা সময়"</string>
     <string name="screen_timeout_title" msgid="785134393520893049">"স্ক্ৰীন অফ হৈ যায়"</string>
-    <string name="screen_timeout_summary" msgid="5558778019594643427">"নিস্ক্ৰিয় হৈ থকাৰ <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> পিছৰ"</string>
+    <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> নিস্ক্ৰিয় হৈ থকাৰ পাছত"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ৱালপেপাৰ"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"ৱালপেপাৰ আৰু শৈলী"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"গৃহ, লক স্ক্ৰীন"</string>
@@ -1436,7 +1443,7 @@
     <string name="automatic_brightness" msgid="4599827881929079513">"স্বয়ংক্ৰিয় উজ্জ্বলতা"</string>
     <string name="lift_to_wake_title" msgid="8994218158737714046">"সক্ৰিয় কৰিবলৈ দাঙক"</string>
     <string name="ambient_display_screen_title" msgid="8615947016991429325">"স্তিমিত ডিছপ্লে’"</string>
-    <string name="ambient_display_category_triggers" msgid="1216640141609270011">"কেতিয়া দেখুওৱাব"</string>
+    <string name="ambient_display_category_triggers" msgid="1216640141609270011">"কেতিয়া দেখুওৱা হ\'ব"</string>
     <string name="doze_title" msgid="1523090408230862316">"জাননী আহিলে স্ক্ৰীন জাগ্ৰত কৰক"</string>
     <string name="doze_summary" msgid="8252867381522942804">"স্ক্ৰীনখন গাঢ় ৰঙৰ হৈ থকা সময়ত, এইটোৱে নতুন জাননীসমূহৰ বাবে অন কৰে"</string>
     <string name="doze_always_on_title" msgid="7326245192352868477">"সময় আৰু তথ্য সদায় দেখুৱাওক"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ছিষ্টেম আপডে’টৰ অনুজ্ঞাপত্ৰসমূহ"</string>
     <string name="terms_title" msgid="2071742973672326073">"চৰ্তসমূহ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ছিষ্টেম ৱেবভিউ লাইচেঞ্চ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ৱালপেপাৰ ক্ৰেডিট"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"উপগ্ৰহ চিত্ৰ যোগানকাৰী:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"হস্তকৃত"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"হাতপুথিখন ল’ড কৰাত এটা সমস্যা হৈছে৷"</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"সক্ষম কৰক"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ষ্ট’ৰেজ মচক"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"আপডেইটবিলাক আঁতৰাওক"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"প্ৰতিবন্ধিত ছেটিঙৰ অনুমতি দিয়ক"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"আপুনি বাছনি কৰা কিছুমান কাৰ্যকলাপ ডিফ’ল্ট হিচাপে এই এপ্‌টোত খোল খায়।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"আপুনি এই এপটোক ৱিজেট সৃষ্টি কৰিবলৈ আৰু সেইবিলাকৰ ডেটা চাবলৈ অনুমতি দিবলৈ বাছনি কৰিছে।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"কোনো ডিফ’ল্ট ছেট কৰা হোৱা নাই৷"</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"আভ্যন্তৰীণ ষ্ট’ৰেজ"</string>
     <string name="recompute_size" msgid="1098091228370999128">"এপৰ আকাৰ পুনঃগণনা কৰা হৈছে…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"এপ্ ডেটা মচিবনে?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"এই এপৰ ডেটাখিনি স্থায়ীভাৱে মচা হ’ব। ইয়াত ফাইল, ছেটিং, ডেটাবে’ছ আৰু অন্য এপৰ ডেটা অন্তৰ্ভুক্ত।"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ফাইল আৰু ছেটিঙকে ধৰি এই এপ্‌টোৰ ডেটা এই ডিভাইচটোৰ পৰা মচা হ\'ব"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ঠিক"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"বাতিল কৰক"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"মচক"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ইনষ্টলহৈ থকা এপৰ তালিকাত এপটো পোৱা নগ\'ল।"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"এপৰ ষ্ট’ৰেজ মচিব পৰা নগ\'ল।"</string>
@@ -2322,7 +2328,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"শ্বৰ্টকাটৰ দ্বাৰা বিৱৰ্ধিত কৰক"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"শ্বৰ্টকাটৰ দ্বাৰা আৰু তিনিবাৰ টিপি বিৱৰ্ধিত কৰক"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g>ৰ বিষয়ে"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"প্ৰদৰ্শন হোৱাৰ আকাৰ আৰু শৈলী"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ডিছপ্লে’ৰ আকাৰ আৰু পাঠ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"পাঠ কেনেকৈ প্ৰদৰ্শিত হয় সেয়া সলনি কৰক"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"বিষয়: গৰম বতাহ থকা বেলুনৰ ডিজাইন"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"প্ৰেৰক: বিল"</string>
@@ -3702,7 +3708,7 @@
     <string name="spatial_audio_title" msgid="6591051622375191603">"প্ৰকৃত অভিজ্ঞতা দিয়া অডিঅ’"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"ডায়েল পেডৰ ট\'নসমূহ"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"স্ক্ৰীন লক কৰাৰ ধ্বনি"</string>
-    <string name="charging_sounds_title" msgid="5261683808537783668">"চ্চাৰ্জ কৰাৰ ধ্বনি আৰু কম্পন"</string>
+    <string name="charging_sounds_title" msgid="5261683808537783668">"চাৰ্জ কৰাৰ ধ্বনি আৰু কম্পন"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ড’ক কৰাৰ শব্দ"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"স্পৰ্শৰ ধ্বনি"</string>
     <string name="vibrate_icon_title" msgid="1281100105045362530">"কম্পন ম’ডত থকাৰ সময়ত সদায় চিহ্নটো দেখুৱাওক"</string>
@@ -4401,8 +4407,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> টা অব্যৱহৃত এপ্‌</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ব্যৱহাৰ নকৰা এপৰ ছেটিং"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"এপৰ কাৰ্যকলাপ পজ কৰক"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"যদি ব্যৱহাৰ হোৱা নাই, তেন্তে অনুমতি আঁতৰাওক, অস্থায়ী ফাইল মচক আৰু জাননী বন্ধ কৰক"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"অব্যৱহৃত হৈ থাকিলে এপৰ কাৰ্যকলাপ পজ কৰক"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"অনুমতি আঁতৰাওক, অস্থায়ী ফাইল মচক আৰু জাননী বন্ধ কৰক"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"আটাইবোৰ এপ্"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ইনষ্টল কৰা হোৱা এপসমূহ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"তাৎক্ষণিক এপ্‌সমূহ"</string>
@@ -5058,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"এই ডিভাইচটো <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>ৰ দ্বাৰা পৰিচালিত।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"অধিক জানক"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"প্ৰতিবন্ধিত ছেটিং"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g>ৰ বাবে প্ৰতিবন্ধিত ছেটিঙৰ অনুমতি দিয়া হৈছে"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"আপোনাৰ নিৰাপত্তাৰ বাবে এই ছেটিংটো বৰ্তমান উপলব্ধ নহয়।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"বিত্তীয় সহায় প্ৰাপ্ত ডিভাইচৰ তথ্য"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীয়ে এই ডিভাইচটোৰ ছেটিং সলনি কৰিব পাৰে আৰু ইয়াত ছফ্টৱেৰ ইনষ্টল কৰিব পাৰে।\n\nযদি আপুনি পৰিশোধ পাহৰি যায়, আপোনাৰ ডিভাইচটো লক হৈ যাব।\n\nঅধিক জানিবলৈ আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীৰ সৈতে যোগাযোগ কৰক।"</string>
@@ -5544,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"বন্ধ স্ক্ৰীনৰ পৰা বাহ্যিক ডিভাইচৰ বাবে নিয়ন্ত্ৰণসমূহ দেখুৱাওক"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"লক কৰি থোৱা ডিভাইচৰ পৰা নিয়ন্ত্ৰণ কৰক"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ডিভাইচ নিয়ন্ত্ৰণ কৰা এপে অনুমতি দিলে আপোনাৰ ফ’নটো অথবা টেবলেটটো আনলক নকৰাকৈ বাহ্যিক ডিভাইচসমূহ নিয়ন্ত্ৰণ কৰক"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ব্যৱহাৰ কৰিবলৈ, প্ৰথমে \"ডিভাইচৰ নিয়ন্ত্ৰণ দেখুৱাওক\" অন কৰক"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"যেতিয়া উপলব্ধ হয় দ্বৈত-শাৰীৰ ঘড়ী দেখুৱাব"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"দ্বৈত-শাৰীৰ ঘড়ী"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
