--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"აპის ენები"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"დააყენეთ ენა თითოეული აპისთვის"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"აპის ენა"</string>
+    <string name="warnings_title" msgid="613849105118598110">"აპის განახლება"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ბოლო დროს ხელმისაწვდომი ენების სანახავად ეს აპი უნდა განაახლოთ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ახლავე განახლება"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"შემოთავაზებული ენები"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ყველა ენა"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"სისტემის ენა"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"სისტემის ნაგულისხმევი — <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"აპისთვის ნაგულისხმევად არის დაყენებული <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> და მას არ აქვს რამდენიმე ენის მხარდაჭერა."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ამ აპისთვის ენის არჩევა პარამეტრებიდან მიუწვდომელია."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ამ აპისთვის ენას პარამეტრებიდან ვერ აირჩევთ."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">გსურთ არჩეული ენების ამოშლა?</item>
       <item quantity="one">გსურთ არჩეული ენის ამოშლა?</item>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"თქვენ ან თქვენ ბავშვს შეგიძლიათ თითის ანაბეჭდის სურათების და მოდელის წაშლა ან ანაბეჭდით განბლოკვის ნებისმიერ დროს გამორთვა პარამეტრებიდან. თითის ანაბეჭდის სურათები და მოდელები მანამ ინახება ტელეფონში, სანამ მათ არ წაშლით."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"თქვენი ტელეფონი შეიძლება მაშინაც განიბლოკოს, როცა ამის განზრახვა არ გაქვთ, მაგალითად, მაშინ, თუ ვინმე მასზე თითს მიგაჭერინებთ."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"თქვენი ბავშვის ტელეფონის განბლოკვა მაშინაც შესაძლებელია, როცა ამის განზრახვა არ გაქვთ, მაგალითად, თუ ვინმე მასზე თითს მიგაჭერინებთ."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"საუკეთესო შედეგების მისაღებად გამოიყენეთ ეკრანის დამცავი, რომელიც სერტიფიცირებულია Made for Google-ის მიერ. ეკრანის სხვა დამცავებზე თქვენი თითის ანაბეჭდი, შესაძლოა, არ მუშაობდეს."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"საუკეთესო შედეგების მისაღებად გამოიყენეთ ეკრანის დამცავი, რომელიც სერტიფიცირებულია Made for Google-ის მიერ. ეკრანის სხვა დამცავებზე თქვენი ბავშვის თითის ანაბეჭდი, შესაძლოა, არ მუშაობდეს."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"შეცვალეთ თქვენი თითის დაჭერა ოდნავ ყოველ ჯერზე"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"დაფარეთ ხატულა თქვენი თითის ანაბეჭდის შუა ნაწილით"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"რამდენჯერმე აიღეთ და ისევ შეახეთ თითი სენსორს, რათა თქვენი თითის ანაბეჭდის ყველა ნაწილის დამატება შეძლოთ"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ხანგრძლივად შეეხეთ ყოველ ჯერზე, როცა თითის ანაბეჭდის ხატულა ამოძრავდება. ეს ხელს შეუწყობს სრულყოფილი თითის ანაბეჭდის შექმნას."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"თითის წვერი დაადეთ სენსორს"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ბოლოს, დაადეთ თითის კიდეები"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"დაადეთ თითის მარცხენა კიდე"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"დაადეთ თითის მარჯვენა კიდე"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"დაადეთ თითის ერთი მხარე სენსორს და გააჩერეთ ცოტა ხნით, შემდეგ კი დაადეთ მეორე მხარე"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ეს ხელს შეუწყობს სრულყოფილი თითის ანაბეჭდის შექმნას"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"მიმდინარეობს თითის ანაბეჭდის რეგისტრაცია, <xliff:g id="PERCENTAGE">%d</xliff:g> პროცენტი"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play სისტემის განახლების ლიცენზიები"</string>
     <string name="terms_title" msgid="2071742973672326073">"წესები და პირობები"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"სისტემის ვებ მიმოხილვის ლიცენზია"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ფონის შემქმნელები"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"სატელიტური სურათების პროვაიდერები:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"სახელმძღვანელო"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"სახელმძღვანელოს ჩატვირთვისას წარმოიქმნა პრობლემა."</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"ჩართვა"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"მონაცემთა საცავის გასუფთავება"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"განახლებების ამოშლა"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"შეზღუდული რეჟიმის პარამეტრების დაშვება"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"თქვენ მიერ არჩეულ აქტივობათაგან ზოგიერთი ნაგულისხმევად ამ აპში იხსნება."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"თქვენ მიეცით ამ აპს ვიჯეტების შექმნისა და მონაცემებზე წვდომის უფლება."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"არ არის დაყენებული ნაგულისხმევი პარამეტრები."</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"შიდა მეხსიერება"</string>
     <string name="recompute_size" msgid="1098091228370999128">"ზომის გადათვლა…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"წაიშალოს აპის მონაცემები?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ამ აპის მონაცემები სამუდამოდ წაიშლება. ეს ეხება ფაილებს, პარამეტრებს, მონაცემთა ბაზებსა და აპის სხვა მონაცემებს."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ამ აპის მონაცმეები, მათ შორის ფაილები და პარამეტრები, სამუდამოდ წაიშლება ამ მოწყობილობიდან"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"კარგი"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"გაუქმება"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"წაშლა"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"დაყენებული აპების სიაში ეს აპი ვერ მოიძებნა."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"აპის მეხსიერების გასუფთავება ვერ მოხერხდა."</string>
@@ -3374,8 +3380,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"არ არის დაყენებული - სამუშაო პროფილი"</string>
     <string name="user_admin" msgid="4024553191395768119">"ადმინისტრატორი"</string>
     <string name="user_you" msgid="3070562015202859996">"თქვენ (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"მეტ მომხმარებელს ვერ დაამატებთ. წაშალეთ რომელიმე მომხმარებელი ახლის დასამატებლად."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"მომხმარებლების მართვა შეუძლია მხოლოდ ტაბლეტის მფლობელს."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"მომხმარებლების მართვა შეუძლია მხოლოდ ტელეფონის მფლობელს."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"შეზღუდული პროფილიდან ანგარიშების დამატება შეუძლებელია"</string>
@@ -4401,12 +4406,9 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> გამოუყენებელი აპი</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> გამოუყენებელი აპი</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"აპის გამოუყენებელი პარამეტრები"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"დაპაუზდეს აპში აქტივობა, თუ არ იყენებენ"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ნებართვების ამოშლა, დროებითი ფაილების წაშლა და შეტყობინებების გამორთვა"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ყველა აპი"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"დაინსტალირებული აპები"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"მყისიერი აპები"</string>
@@ -5062,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ამ მოწყობილობას მართავს <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"შეიტყვეთ მეტი"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"შეზღუდული რეჟიმის პარამეტრები"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"შეზღუდული რეჟიმის პარამეტრები დაშვებულია <xliff:g id="APP_NAME">%s</xliff:g>-ისთვის"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"თქვენივე უსაფრთხოებისთვის ეს პარამეტრი ამჟამად მიუწვდომელია."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"დაფინანსებული მოწყობილობის ინფორმაცია"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"თქვენს კრედიტის პროვაიდერს შეუძლია ამ მოწყობილობაზე პარამეტრების შეცვლა და პროგრამული უზრუნველყოფის ინსტალაცია.\n\nთუ რომელიმე გადახდას გამოტოვებთ, თქვენი მოწყობილობა ჩაიკეტება.\n\nმეტის შესატყობად, დაუკავშირდით თქვენს კრედიტის პროვაიდერს."</string>
@@ -5548,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"მართვის საშუალებების ჩვენება ჩაკეტილი ეკრანიდან გარე მოწყობილობებისთვის"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ჩაკეტილი მოწყობილობიდან კონტროლი"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"გააკონტროლეთ გარე მოწყობილობები თქვენი ტელეფონისა თუ ტაბლეტის განბლოკვის გარეშე, თუ ეს დაშვებულია მოწყობილობის მართვის საშუალებების აპით"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"გამოსაყენებლად, ჯერ ჩართეთ „მოწყობილობების მართვის საშუალებების ჩვენება“"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ორხაზიანი საათის ჩვენება, როცა ხელმისაწვდომია"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ორხაზიანი საათი"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5566,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"იჯარას ვადა არ გასდის."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"პარამეტრებზე ეკრანის გადაფარვის დაშვება"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"პარამეტრების ეკრანების გადაფარვის დაშვება აპებისთვის, რომლებსაც სხვა აპების ზემოდან გამოჩენა შეუძლია"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"სიმულაციური მოდემის დაშვება"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"დაუშვით ამ მოწყობილობაზე სიმულაციური მოდემის სერვისის გაშვება ინსტრუმენტული ტესტირებისთვის. ნუ ჩართავთ მას ტელეფონის ნორმალური გამოყენების დროს"</string>
     <string name="media_controls_title" msgid="403271085636252597">"მედია"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"მედია დამკვრელის ჩამაგრება"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"დაკვრის სწრაფად გასაგრძელებლად მედია დამკვრელი გახსნილი დარჩება სწრაფ პარამეტრებში"</string>
@@ -5654,8 +5653,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"აპის ჩამაგრების გამოყენება"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"დეველოპერთა პარამეტრების გამოყენება"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ბეჭდვის სერვისის გამოყენება"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"რამდენიმე მომხმარებლის დაშვება"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"უსადენო გამართვის გამოყენება"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"გრაფიკული დრაივერის პარამეტრების გამოყენება"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"ბატარეის დამზოგის გამოყენება"</string>
@@ -5721,12 +5719,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"მოდიფიკატორები"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"მოქმედებები (წარმოების ღირებულება)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"მოქმედებები (საბაზისო ფასი)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ჯილდო თითოეული ღონისძიებისთვის"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"ჯილდო ღონისძიების მთელი მსვლელობისას"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"ჯილდოს მაქსიმალური რაოდენობა დღეში"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ტოპ აქტივობა"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"შეტყობინება ნანახია"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"შეტყობინება ნანახია 15 წუთის ფარგლებში"</string>
@@ -5757,20 +5752,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"გადახედვა"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"აირჩიეთ ეკრანმზოგი"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"დამატებითი ინფორმაციის ჩვენება"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"ერკანმზოგზე დროის, თარიღის, ამინდის, ჰაერის სისუფთავის ხარისხის და ტრანსლაციის შესახებ ცნობების ჩვენება"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"სხვა პარამეტრები"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"აირჩიეთ ეკრანმზოგი"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"აირჩიეთ, რას იხილავთ თქვენს ეკრანზე, როცა თქვენი ტაბლეტი დოკ-სადგურთან იქნება მიერთებული. ეკრანმზოგის გამოყენების შემთხვევაში თქვენმა მოწყობილობამ შეიძლება მეტი ენერგია გამოიყენოს."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"მორგება"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"თავისუფალი ფორმის მხარდაჭერის ჩასართავად საჭიროა გადატვირთვა."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"მეორეულ ეკრანზე დესკტოპ რეჟიმის იძულებით გასააქტიურებლად საჭიროა გადატვირთვა."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ახლავე გადატვირთვა"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"გადატვირთვა მოგვიანებით"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"სივრცითი აუდიო"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"თავსებადი მედიის ხმა უფრო იმერსიული ხდება"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"თავის მოძრაობაზე თვალის დევნება"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"აუდიო იცვლება თქვენი თავის მოძრაობასთან ერთად"</string>
