--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -220,11 +220,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Lietotņu valodas"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Iestatiet katras lietotnes valodu"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Lietotnes valoda"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Lietotnes atjaunināšana"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Jums ir jāatjaunina lietotne, lai skatītu jaunākās pieejamās valodas."</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Atjaunināt tūlīt"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Ieteiktās valodas"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Visas valodas"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistēmas valoda"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Sistēmas noklusējums — <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Šīs lietotnes noklusējuma valoda ir <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>, un citas valodas netiek atbalstītas."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Iestatījumos nav pieejama valodas atlase šai lietotnei."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Iestatījumos nevar atlasīt valodu šai lietotnei."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="zero">Vai noņemt atlasītās valodas?</item>
       <item quantity="one">Vai noņemt atlasītās valodas?</item>
@@ -458,6 +462,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Iestatījumos jūs un jūsu bērns varat jebkurā laikā dzēst pirksta nospieduma attēlus un modeli vai izslēgt autorizāciju ar pirksta nospiedumu. Pirksta nospieduma attēli un modeļi tiek glabāti tālrunī, līdz tie tiek izdzēsti."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Jūsu tālrunis var tikt nejauši atbloķēts, piemēram, ja kāda persona pavērš to pret jūsu pirkstu."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Jūsu bērna tālrunis var tikt nejauši atbloķēts, piemēram, ja kāda persona pavērš to pret bērna pirkstu."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Lai iegūtu vislabākos rezultātus, izmantojiet ekrāna aizsargplēvi, kam ir “Made for Google” sertifikāts. Ar citām ekrāna aizsargplēvēm jūsu pirksta nospiedums, iespējams, nedarbosies."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Lai iegūtu vislabākos rezultātus, izmantojiet ekrāna aizsargplēvi, kam ir “Made for Google” sertifikāts. Ar citām ekrāna aizsargplēvēm jūsu bērna pirksta nospiedums, iespējams, nedarbosies."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Katru reizi mazliet mainiet pirksta pozīciju"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Aizklājiet ikonu ar pirksta nospieduma centru"</string>
@@ -511,7 +517,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Atkārtoti uzlieciet pirkstu, lai pievienotu dažādas pirksta nospieduma daļas."</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Pieskarieties pirksta nospieduma ikonai un turiet to ikreiz, kad tā pārvietojas. Tādējādi tiks tverts plašāks pirksta nospiedums."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Novietojiet pirksta galu uz sensora"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Visbeidzot, izmantojiet pirksta sānus"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Novietojiet pirksta kreiso sānu"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Novietojiet pirksta labo sānu"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Novietojiet pirksta sānu uz sensora un turiet, pēc tam novietojiet otru pirksta sānu."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Tādējādi tiks tverts plašāks pirksta nospiedums."</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Pirksta nospieduma reģistrēšana: <xliff:g id="PERCENTAGE">%d</xliff:g> procenti"</string>
@@ -1927,8 +1934,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play sistēmas atjauninājumu licences"</string>
     <string name="terms_title" msgid="2071742973672326073">"Pakalpojumu sniegšanas noteikumi"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistēmas WebView licence"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Fona tapetes autors"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Satelītuzņēmumu nodrošinātāji:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Rokasgrāmata"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Radās ar rokasgrāmatas ielādi saistīta problēma."</string>
@@ -2081,8 +2087,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Iespējot"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Notīrīt krātuvi"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Atinstalēt atjauninājumus"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Atļaut ierobežotos iestatījumus"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Dažas no jūsu atlasītajām darbībām pēc noklusējuma tiks veiktas šajā lietotnē."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Jūs esat izvēlējies šai lietotnei ļaut veidot logrīkus un piekļūt to datiem."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Nav iestatīti noklusējumi."</string>
@@ -2117,9 +2122,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Iekšējā krātuve"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Notiek izmēra pārrēķināšana..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Vai dzēst lietotnes datus?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Tiks neatgriezeniski dzēsti šīs lietotnes dati, tostarp faili, iestatījumi, datu bāzes un citi lietotnes dati."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Šīs lietotnes dati, tostarp faili un iestatījumi, tiks neatgriezeniski dzēsti no šīs ierīces."</string>
     <string name="dlg_ok" msgid="1421350367857960997">"Labi"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Atcelt"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Dzēst"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Šī lietotne netika atrasta instalēto lietotņu sarakstā."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Neizdevās notīrīt krātuvi lietotnei."</string>
@@ -3418,8 +3424,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Darba profils — nav iestatīts"</string>
     <string name="user_admin" msgid="4024553191395768119">"Administrators"</string>
     <string name="user_you" msgid="3070562015202859996">"Jūs (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Nevar pievienot vairāk lietotāju. Lai pievienotu jaunu lietotāju, noņemiet kādu no pašreizējiem."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Lietotājus var pārvaldīt tikai planšetdatora īpašnieks."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Lietotājus var pārvaldīt tikai tālruņa īpašnieks."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Ierobežoti profili nevar pievienot kontus."</string>
@@ -4464,12 +4469,9 @@
       <item quantity="one"><xliff:g id="COUNT_1">%d</xliff:g> neizmantota lietotne</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> neizmantotas lietotnes</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Neizmantotās lietotnes iestatījumi"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Apturēt lietotni, ja tā netiek izmantota"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Atsaukt atļaujas, dzēst pagaidu failus un izslēgt paziņojumus"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Visas lietotnes"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Instalētās lietotnes"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Tūlītējās lietotnes"</string>
@@ -5144,10 +5146,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Šo ierīci pārvalda <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Uzzināt vairāk"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Ierobežots iestatījums"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Ierobežotie iestatījumi ir atļauti lietotnei <xliff:g id="APP_NAME">%s</xliff:g>."</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Drošības apsvērumu dēļ šis iestatījums pašlaik nav pieejams."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Finansētās ierīces informācija"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Jūsu kredīta nodrošinātājs var mainīt iestatījumus un instalēt programmatūru šajā ierīcē.\n\nJa laicīgi neveiksiet maksājumu, ierīce tiks bloķēta.\n\nLai uzzinātu vairāk, sazinieties ar kredīta nodrošinātāju."</string>
@@ -5637,6 +5637,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Bloķēšanas ekrānā rādīt ārējo ierīču vadīklas"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Kontrole no bloķētas ierīces"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Varat kontrolēt ārējās ierīces, neatbloķējot savu tālruni vai planšetdatoru, ja tas ir atļauts ierīču vadīklu lietotnē."</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Lai izmantotu vadīklas, vispirms ieslēdziet iestatījumu “Rādīt ierīču vadīklas”."</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Rādīt pulksteni divās rindās, ja tas ir pieejams"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Pulkstenis divās rindās"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5654,10 +5655,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Neierobežots nomas termiņš."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Atļaut ekrānu pārklāšanu iestatījumos"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Atļaut lietotnēm, ko var rādīt pāri citām lietotnēm, pārklāt iestatījumu ekrānus"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Atļaut modema imitāciju"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Atļaut šajā ierīcē izpildīt modema imitācijas pakalpojumu, lai veiktu instrumentācijas testu. Neiespējojiet šo atļauju parastas tālruņa lietošanas laikā."</string>
     <string name="media_controls_title" msgid="403271085636252597">"Multivide"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Piespraust multivides atskaņotāju"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Multivides atskaņotājs paliek atvērts sadaļā Ātrie iestatījumi, lai varētu ātri atsākt atskaņošanu"</string>
@@ -5743,8 +5742,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Izmantot lietotņu piespraušanu"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Izmantot izstrādātāju opcijas"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Izmantot drukāšanas pakalpojumu"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Atļaut vairākus lietotājus"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Izmantot bezvadu atkļūdošanu"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Izmantot grafikas draivera preferences"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Izmantot akumulatora enerģijas taupīšanas režīmu"</string>
@@ -5810,12 +5808,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Pārveidotāji"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Darbības (izveides cena)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Darbības (pamatcena)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Atlīdzības par vienu notikumu"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Atlīdzības par notikuma kopējo ilgumu"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimālais atlīdzību skaits dienā"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Biežākā darbība"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Paziņojums redzēts"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Paziņojums redzēts 15 minūšu laikā"</string>
@@ -5846,20 +5841,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Priekšskatīt"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Izvēlieties ekrānsaudzētāju"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Rādīt papildu informāciju"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Ekrānsaudzētājā rādīt laiku, datumu un informāciju par laikapstākļiem, gaisa kvalitāti un apraidi"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Citi iestatījumi"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Ekrānsaudzētāja izvēle"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Izvēlieties, kas būs redzams ekrānā, kad planšetdators būs dokots. Ja izmantosiet ekrānsaudzētāju, ierīce var patērēt vairāk enerģijas."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Pielāgot"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Lai iespējotu brīvās formas atbalstu, nepieciešama atkārtota palaišana."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Lai piespiedu kārtā aktivizētu darbvirsmas režīmu sekundārajos displejos, nepieciešama atkārtota palaišana."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Atkārtoti palaist tūlīt"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Atkārtoti palaist vēlāk"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Telpiskais audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Audio no saderīga multivides satura kļūst iekļaujošāks"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Galvas izsekošana"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Kustinot galvu, audio mainīsies, lai izklausītos dabiskāk"</string>
