--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Јазици за апликации"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Поставете го јазикот за секоја апликација"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Јазик на апликациjата"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Ажурирајте ја апликацијата"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Треба да ја ажурирате апликацијата со последните достапни јазици"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Ажурирај сега"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Предложени јазици"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Сите јазици"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Јазик на системот"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Стандардно за системот - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Апликацијата е поставена на <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> стандардно и не поддржува повеќе јазици."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Не може да се бира јазик за апликацијава од „Поставките“."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Не може да изберете јазик за апликацијава од „Поставките“."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Да се отстранат избраните јазици?</item>
       <item quantity="other">Да се отстранат избраните јазици?</item>
@@ -454,6 +458,10 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Вие и вашето дете може да ги избришете сликите или моделот на отпечатокот или да го исклучите „Отклучувањето со отпечаток на прст“ во секое време во „Поставки“. Сликите и моделите на отпечатокот се складираат во телефонот додека не се избришат."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Телефонот може да се отклучи кога немате таква намера, како на пример, ако некој го допре до вашиот прст."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Телефонот на вашето дете може да се отклучи кога детето нема намера за тоа, на пример, ако некој го постави телефонот под неговиот прст."</string>
+    <!-- no translation found for security_settings_fingerprint_v2_enroll_introduction_footer_message_6 (5314031490467481499) -->
+    <skip />
+    <!-- no translation found for security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6 (3563942520716110478) -->
+    <skip />
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Менувајте ја положбата на прстот по малку секој пат"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Покријте ја иконата со средината на отпечатокот"</string>
@@ -507,7 +515,10 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Подигнувајте го прстот за да ги додадете различните делови од отпечатокот"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Допрете и задржете секој пат кога иконата за отпечаток ќе се премести. Ова помага за да се сними повеќе од отпечатокот."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Поставете го врвот на прстот на сензорот"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"За крај, користете ги рабовите на прстот"</string>
+    <!-- no translation found for security_settings_udfps_enroll_left_edge_title (1944076382202470458) -->
+    <skip />
+    <!-- no translation found for security_settings_udfps_enroll_right_edge_title (9036744264606447490) -->
+    <skip />
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Поставете го отпечатокот странично на сензорот и задржете, а потоа направете исто со другата страна"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Ова помага за да се сними повеќе од отпечатокот"</string>
     <!-- String.format failed for translation -->
@@ -1299,7 +1310,7 @@
     <string name="auto_rotate_option_off" msgid="2788096269396290731">"Исклучено"</string>
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Вклучено"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Вклучено - според лице"</string>
-    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Овозможи откривање лица"</string>
+    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Овозможи „Откривање лица“"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екран"</string>
     <string name="screen_resolution_option_high" msgid="2617496842852992853">"Висока резолуција"</string>
     <string name="screen_resolution_option_highest" msgid="7892101083236381555">"Највисока резолуција"</string>
@@ -1907,8 +1918,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Лиценци за системско ажурирање од Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Одредби и услови"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Системска лиценца за WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Признанија за тапети"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Извор на сателитски снимки:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Упатство"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Постои проблем со вчитување на упатството."</string>
@@ -2059,8 +2069,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Овозможи"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Избриши ги податоците"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Деинсталирај ажурирања"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Дозволете ограничени поставки"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некои од активностите што ги избравте стандардно се отвораат во апликацијава."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Сте одбрале да ѝ дозволите за апликацијата да создава виџети и да пристапува кон нивните податоци."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Нема поставени стандардни вредности."</string>
@@ -2095,9 +2104,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Внатрешен капацитет"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Повторно пресметување големина..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Да се избришат податоците на апликацијата?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Податоците од апликацијава трајно ќе се избришат. Ова вклучува датотеки, поставки, бази на податоци и други податоци од апликацијата."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Податоците за апликацијава, вклучително датотеките и поставките, ќе се избришат трајно од уредов"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"Во ред"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Откажи"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Избриши"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Апликацијата не е пронајдена во списокот на инсталирани апликации."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Не може да се исчисти меморијата за апликацијата."</string>
@@ -2328,7 +2338,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Променете како да се прикажува текстот"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Предмет: дизајни на балони на топол воздух"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Од: Бил"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Добро утро!\n\nСамо сакав да проверам како оди со дизајните. Дали ќе бидат готови пред да почнеме да ги градиме новите балони?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Добро утро!\n\nСамо сакав да проверам како оди со дизајните. Дали ќе бидат готови пред да почнеме да ги правиме новите балони?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Ресетирај поставки"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Да се ресетираат големината и текстот на екранот?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Вашите поставки за големина и текст на екранот ќе се ресетираат на оригиналните поставки на телефонот"</string>
@@ -4159,7 +4169,7 @@
     <string name="zen_mode_schedule_alarm_title" msgid="305237266064819345">"Алармот може да го игнорира времето на завршување"</string>
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Распоредот се исклучува кога ќе заѕвони аларм"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"Однесување на „Не вознемирувај“"</string>
-    <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Користете стандардни поставки"</string>
+    <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Користи стандардни поставки"</string>
     <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Создајте приспособени поставки за распоредов"</string>
     <string name="zen_mode_custom_behavior_category_title" msgid="7815612569425733764">"За „<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>“"</string>
     <string name="summary_divider_text" msgid="8836285171484563986">", "</string>
@@ -4403,8 +4413,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> некористени апликации</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Поставки за некористена апликација"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"Паузирај ја активноста на апликацијата"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Отстранува дозволи, брише привремени датотеки и запира известувања ако не се користат"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Паузирај неактивна апликација"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Отстранува дозволи, брише привремени датотеки и запира известувања"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Сите апликации"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Инсталирани апликации"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Инстант апликации"</string>
@@ -5060,10 +5070,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"<xliff:g id="ORGANIZATION_NAME">%s</xliff:g> управува со уредов."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Дознајте повеќе"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Ограничена поставка"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Ограничени поставки дозволени за <xliff:g id="APP_NAME">%s</xliff:g>"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Заради ваша безбедност, поставкава не е достапна во моментов."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Податоци за уред на рати"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Вашиот продавач на рати може да ги менува поставките и да инсталира софтвер на уредов.\n\nАко пропуштите плаќање, уредот ќе ви биде заклучен.\n\nЗа да дознаете повеќе, контактирајте со продавачот на рати."</string>
@@ -5546,6 +5554,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Приказ на контролите за надворешни уреди од заклучен екран"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Контролирајте од заклучен уред"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Контролирајте ги надворешните уреди без да го отклучите телефонот или таблетот ако е дозволено со апликацијата за контроли за уреди"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"За да користите, прво вклучете „Прикажувај контроли за уреди“"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Прикажувај часовник со двојна линија кога е достапен"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Часовник со двојна линија"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5747,7 +5756,7 @@
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Потврдете"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Преглед"</string>
-    <string name="dream_picker_category" msgid="7726447836872744867">"Избор на заштитник на екран"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Изберете заштитник на екран"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Прикажување дополнителни податоци"</string>
     <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Прикажува време, датум, временска прогноза, квалитет на воздухот и детали за Cast на заштитникот на екранот"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Повеќе поставки"</string>
