--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ଆପର ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ପ୍ରତ୍ୟେକ ଆପ ପାଇଁ ଭାଷା ସେଟ କରନ୍ତୁ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ଆପର ଭାଷା"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ଆପକୁ ଅପଡେଟ କରନ୍ତୁ"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ଉପଲବ୍ଧ ନବୀନତମ ଭାଷାଗୁଡ଼ିକ ପାଇଁ ଆପଣ ଆପକୁ ଅପଡେଟ କରିବା ଆବଶ୍ୟକ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ଏବେ ଅପଡେଟ କରନ୍ତୁ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ପ୍ରସ୍ତାବିତ ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ସମସ୍ତ ଭାଷା"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ସିଷ୍ଟମ ଭାଷା"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"ସିଷ୍ଟମ ଡିଫଲ୍ଟ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"ଆପଟି ଡିଫଲ୍ଟ ଭାବରେ <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ଭାଷାରେ ସେଟ ହୋଇଛି ଏବଂ ଏହା ଏକାଧିକ ଭାଷାକୁ ସମର୍ଥନ କରେ ନାହିଁ।"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ସେଟିଂସରୁ ଏହି ଆପ ପାଇଁ ଭାଷା ଚୟନ ଉପଲବ୍ଧ ନାହିଁ।"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ସେଟିଂସରୁ ଆପଣ ଏହି ଆପ ପାଇଁ କୌଣସି ଭାଷା ଚୟନ କରିପାରିବେ ନାହିଁ।"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">ଚୟନିତ ଭାଷାଗୁଡ଼ିକୁ କାଢ଼ିଦେବେ?</item>
       <item quantity="one">ଚୟନିତ ଭାଷାକୁ କାଢ଼ିଦେବେ?</item>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"ଟିପଚିହ୍ନର ଛବି ଓ ମଡେଲକୁ ଆପଣ ଏବଂ ଆପଣଙ୍କ ପିଲା ଡିଲିଟ କରିପାରିବେ କିମ୍ବା ଯେ କୌଣସି ସମୟରେ ସେଟିଂସରେ ଫିଙ୍ଗରପ୍ରିଣ୍ଟ ଅନଲକ ବନ୍ଦ କରିପାରିବେ। ଟିପଚିହ୍ନ ଛବି ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ ନକରିବା ପର୍ଯ୍ୟନ୍ତ ସେଗୁଡ଼ିକ ଫୋନରେ ଷ୍ଟୋର ହୋଇ ରହିଥାଏ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ଯଦି କେହି ଜଣେ ବ୍ୟକ୍ତି ଆପଣଙ୍କ ଫୋନକୁ ଆପଣଙ୍କ ଆଙ୍ଗୁଠିରେ ସ୍ପର୍ଶ କରେ, ତେବେ ଆପଣଙ୍କ ଅଜାଣତରେ ମଧ୍ୟ, ଏହାକୁ ଅନଲକ୍ କରାଯାଇପାରିବ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ଯଦି କେହି ଜଣେ ବ୍ୟକ୍ତି ଆପଣଙ୍କ ପିଲାର ଫୋନକୁ ତା’ର ଆଙ୍ଗୁଠିରେ ସ୍ପର୍ଶ କରେ, ତେବେ ତା’ର ଅଜାଣତରେ ମଧ୍ୟ, ଏହାକୁ ଅନଲକ୍ କରାଯାଇପାରିବ।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ସର୍ବୋତ୍ତମ ଫଳାଫଳ ପାଇଁ, Made for Google ସ୍ୱୀକୃତିପ୍ରାପ୍ତ ଏକ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟର ବ୍ୟବହାର କରନ୍ତୁ। ଅନ୍ୟ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟରଗୁଡ଼ିକ ସହିତ, ଆପଣଙ୍କ ଟିପଚିହ୍ନ କାମ କରିନପାରେ।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ସର୍ବୋତ୍ତମ ଫଳାଫଳ ପାଇଁ, Made for Google ସ୍ୱୀକୃତିପ୍ରାପ୍ତ ଏକ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟର ବ୍ୟବହାର କରନ୍ତୁ। ଅନ୍ୟ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟରଗୁଡ଼ିକ ସହିତ, ଆପଣଙ୍କ ପିଲାର ଟିପଚିହ୍ନ କାମ କରିନପାରେ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ପ୍ରତି ଥର ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ସ୍ଥାନ ସାମାନ୍ୟ ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ଆପଣଙ୍କ ଟିପଚିହ୍ନର ମଝି ଅଂଶ ଦ୍ୱାରା ଆଇକନକୁ କଭର୍ କରନ୍ତୁ"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"ନିଜ ଟିପଚିହ୍ନର ବିଭିନ୍ନ ଅଂଶ ଯୋଗ କରିବା ପାଇଁ ଆଙ୍ଗୁଠି ଉଠାଉଥାନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ପ୍ରତ୍ୟେକ ଥର ଟିପଚିହ୍ନ ଆଇକନ୍ ମୁଭ୍ ହେଲେ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ। ଏହା ଆପଣଙ୍କ ଚିପଚିହ୍ନର ଅଧିକାଂଶ କ୍ୟାପଚର୍ କରିବାରେ ସାହାଯ୍ୟ କରେ।"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠି ଟିପକୁ ସେନ୍ସର୍ ଉପରେ ରଖନ୍ତୁ"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ଶେଷରେ, ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ଧାର ବ୍ୟବହାର କରନ୍ତୁ"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ବାମ ଧାର ରଖନ୍ତୁ"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ଡାହାଣ ଧାର ରଖନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ଆପଣଙ୍କ ଟିପଚିହ୍ନର ଗୋଟିଏ ପାର୍ଶ୍ୱକୁ ସେନ୍ସର୍ ଉପରେ ଧରି ରଖନ୍ତୁ, ତା\'ପରେ ଅନ୍ୟ ପାର୍ଶ୍ୱକୁ ସ୍ୱିଚ୍ କରନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ଏହା ଆପଣଙ୍କ ଚିପଚିହ୍ନର ଅଧିକାଂଶ କ୍ୟାପଚର୍ କରିବାରେ ସାହାଯ୍ୟ କରେ"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ଟିପଚିହ୍ନ ପଞ୍ଜିକରଣ କରିବା ଶତକଡ଼ା <xliff:g id="PERCENTAGE">%d</xliff:g> ସମ୍ପୂର୍ଣ୍ଣ ହୋଇଛି"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ସିଷ୍ଟମ୍ ଅପ୍‌ଡେଟ୍ ଲାଇସେନ୍ସଗୁଡ଼ିକ"</string>
     <string name="terms_title" msgid="2071742973672326073">"ନିୟମ ଓ ସର୍ତ୍ତାବଳୀ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ସିଷ୍ଟମ୍‌ ୱେବ୍‌‌ଭ୍ୟୁ ଲାଇସେନ୍ସ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ୱାଲପେପର କ୍ରେଡିଟଗୁଡ଼ିକ"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ସ୍ୟାଟେଲାଇଟ୍‌ ଇମେଜେରୀ ପ୍ରଦାତା:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ମାନୁଆଲ୍‌"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ମାନୁଆଲ୍‌ ଲୋଡ୍ କରାଯିବାରେ ସମସ୍ୟା ଅଛି।"</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ଷ୍ଟୋରେଜ୍‌ ଖାଲି କରନ୍ତୁ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ଅପ୍‌ଡେଟ୍‌ଗୁଡ଼ିକୁ ଅନ୍ଇ‌ନଷ୍ଟଲ୍‌ କରନ୍ତୁ"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂସକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ଏହି ଆପରେ ଡିଫଲ୍ଟ ଭାବରେ ଆପଣ ଚୟନ କରିଥିବା କିଛି କାର୍ଯ୍ୟକଳାପ।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ୱିଜେଟ୍‌ ତିଆରି କରିବା ଏବଂ ସେଗୁଡ଼ିକର ଡାଟା ଆକ୍ସେସ୍‌ କରିବା ପାଇଁ ଏହି ଆପ୍‌କୁ ଅନୁମତି ଦେବାକୁ ଆପଣ ବାଛିଛନ୍ତି।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"କୌଣସି ଡିଫଲ୍ଟ ସେଟ୍‍ ହୋଇନାହିଁ।"</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ଇଣ୍ଟର୍ନଲ୍‌ ଷ୍ଟୋରେଜ୍‌"</string>
     <string name="recompute_size" msgid="1098091228370999128">"ଆକାରକୁ ପୁଣି ଗଣୁଛି…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"ଆପ୍‌ର ଡାଟା ଡିଲିଟ୍‌ କରିବେ?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ଏହି ଆପର ଡାଟା ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ ହୋଇଯିବ। ଏଥିରେ ଫାଇଲ, ସେଟିଂସ, ଡାଟାବେସ ଏବଂ ଅନ୍ୟ ଆପ ଡାଟା ଅନ୍ତର୍ଭୁକ୍ତ।"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ଫାଇଲ ଏବଂ ସେଟିଂସ ସମେତ ଏହି ଆପର ଡାଟା ଏଇ ଡିଭାଇସରୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ ହୋଇଯିବ"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ଠିକ୍‌ ଅଛି"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"ବାତିଲ କରନ୍ତୁ"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ଡିଲିଟ କରନ୍ତୁ"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ଇନଷ୍ଟଲ୍‌ ହୋଇଥିବା ଆପ୍‌ଗୁଡ଼ିକର ତାଲିକାରେ ଏହି ଆପ୍‌ଟି ମିଳିଲାନାହିଁ।"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ଆପ୍ ପାଇଁ ଷ୍ଟୋରେଜ୍‌କୁ ଖାଲି କରିପାରିବ ନାହିଁ|"</string>
@@ -3374,8 +3380,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"ସେଟ୍‌ ଅପ୍‌ ହୋଇନାହିଁ - କାର୍ଯ୍ୟ ପ୍ରୋଫାଇଲ୍‌"</string>
     <string name="user_admin" msgid="4024553191395768119">"ଆଡ୍‌ମିନ୍‌"</string>
     <string name="user_you" msgid="3070562015202859996">"ଆପଣ (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"ଆପଣ ଆଉ କୌଣସି ଉପଯୋଗକର୍ତ୍ତା ଯୋଗ କରିପାରିବେ ନାହିଁ। ଜଣେ ନୂଆ ଉପଯୋଗକର୍ତ୍ତା ଯୋଗ କରିବାକୁ ଜଣଙ୍କୁ କାଢ଼ି ଦିଅନ୍ତୁ।"</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"କେବଳ ଟାବ୍‌ଲେଟ୍‌ର ମାଲିକ ହିଁ ଉପଯୋଗକର୍ତ୍ତାଙ୍କ ପରିଚାଳନା କରିପାରିବେ।"</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"କେବଳ ଫୋନ୍‌ର ମାଲିକ ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ପରିଚାଳନା କରିପାରିବେ।"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"ପ୍ରତିବନ୍ଧିତ ପ୍ରୋଫାଇଲ୍‌ଗୁଡ଼ିକ ଆକାଉଣ୍ଟ ଆଡ୍‌ କରିପାରିବ ନାହିଁ"</string>
@@ -4401,12 +4406,9 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g>ଟି ଅବ୍ୟବହୃତ ଆପ୍</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g>ଟି ଅବ୍ୟବହୃତ ଆପ୍</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"ଅବ୍ୟବହୃତ ଆପ ସେଟିଂସ"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ବ୍ୟବହାର ହେଉନଥିଲେ ଆପ କାର୍ଯ୍ୟକଳାପ ବିରତ କର"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ଅନୁମତିଗୁଡ଼ିକୁ କାଢ଼ି ଦିଅନ୍ତୁ, ଅସ୍ଥାୟୀ ଫାଇଲଗୁଡ଼ିକୁ ଡିଲିଟ କରନ୍ତୁ ଏବଂ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ସମସ୍ତ ଆପସ୍‌"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ଇନ୍‌ଷ୍ଟଲ୍‌ ହୋଇଥିବା ଆପ୍‌ଗୁଡ଼ିକ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ଇନଷ୍ଟାଣ୍ଟ୍ ଆପ୍ସ"</string>
@@ -5062,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ଏହି ଡିଭାଇସ୍‌ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ଦ୍ୱାରା ପରିଚାଳିତ ହେଉଛି।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ଅଧିକ ଜାଣନ୍ତୁ"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂ"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> ପାଇଁ ପ୍ରତିବନ୍ଧିତ ସେଟିଂସକୁ ଅନୁମତି ଦିଆଯାଇଛି"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ଆପଣଙ୍କ ସୁରକ୍ଷା ପାଇଁ ଏହି ସେଟିଂ ବର୍ତ୍ତମାନ ଅନୁପଲବ୍ଧ ଅଛି।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ଫାଇନାନ୍ସଡ୍ ଡିଭାଇସ୍ ସୂଚନା"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ଏହି ଡିଭାଇସରେ ସେଟିଂସ ପରିବର୍ତ୍ତନ ଏବଂ ସଫ୍ଟୱେର ଇନଷ୍ଟଲ କରିପାରିବେ।\n\nଯଦି ଆପଣ କୌଣସି ପେମେଣ୍ଟ ହରାନ୍ତି, ତେବେ ଆପଣଙ୍କ ଡିଭାଇସ ଲକ ହୋଇଯିବ।\n\nଅଧିକ ଜାଣିବାକୁ, ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ସହ ଯୋଗାଯୋଗ କରନ୍ତୁ।"</string>
@@ -5548,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ଲକ ସ୍କ୍ରିନରୁ ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକୁ ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ଲକ କରାଯାଇଥିବା ଡିଭାଇସରୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ଯଦି Device Controls ଆପ ଦ୍ୱାରା ଅନୁମତି ଦିଆଯାଏ, ତେବେ ଆପଣଙ୍କ ଫୋନ କିମ୍ବା ଟାବଲେଟକୁ ଅନଲକ ନକରି ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ବ୍ୟବହାର କରିବା ପାଇଁ, ପ୍ରଥମେ \"ଡିଭାଇସ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକୁ ଦେଖାନ୍ତୁ\"କୁ ଚାଲୁ କରନ୍ତୁ"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ଉପଲବ୍ଧ ହେଲେ ଡବଲ-ଲାଇନ ଘଣ୍ଟା ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ଡବଲ-ଲାଇନ ଘଣ୍ଟା"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5566,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"ଲିଜର ମିଆଦ କେବେ ବି ଶେଷ ହେବ ନାହିଁ।"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"ସେଟିଂସରେ ସ୍କ୍ରିନ ଓଭରଲେକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"ସେଟିଂସ ସ୍କ୍ରିନଗୁଡ଼ିକୁ ଓଭରଲେ କରିବାକୁ ସେହି ଆପ୍ସକୁ ଅନୁମତି ଦିଅନ୍ତୁ ଯାହା ଅନ୍ୟ ଆପ୍ସ ଉପରେ ଡିସପ୍ଲେ ହୋଇପାରିବ"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"ମକ ମୋଡେମକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"ଇନଷ୍ଟ୍ରୁମେଣ୍ଟେସନ ପରୀକ୍ଷା ପାଇଁ ମକ ମୋଡେମ ସେବା ଚଲାଇବା ନିମନ୍ତେ ଏହି ଡିଭାଇସକୁ ଅନୁମତି ଦିଅନ୍ତୁ। ଫୋନର ସାଧାରଣ ବ୍ୟବହାର ସମୟରେ ଏହାକୁ ସକ୍ଷମ କରନ୍ତୁ ନାହିଁ"</string>
     <string name="media_controls_title" msgid="403271085636252597">"ମିଡିଆ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ମିଡିଆ ପ୍ଲେୟାରରେ ପିନ୍ କରନ୍ତୁ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ଶୀଘ୍ର ପ୍ଲେବ୍ୟାକ ପୁଣି ଆରମ୍ଭ କରିବାକୁ କ୍ୱିକ୍ ସେଟିଂସରେ ମିଡିଆ ପ୍ଲେୟାର ଖୋଲା ରହିଥାଏ"</string>
@@ -5654,8 +5653,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ଆପ୍ ପିନିଂ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ଡେଭଲପରଙ୍କ ପାଇଁ ବିକଳ୍ପଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ପ୍ରିଣ୍ଟ ସେବା ବ୍ୟବହାର କରନ୍ତୁ"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"ଏକାଧିକ ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ୱାୟାରଲେସ୍ ଡିବଗିଂ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ଗ୍ରାଫିକ୍ସ ଡ୍ରାଇଭର୍ ପସନ୍ଦଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"ବ୍ୟାଟେରୀ ସେଭର୍ ବ୍ୟବହାର କରନ୍ତୁ"</string>
@@ -5721,12 +5719,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"ମୋଡିଫାୟରଗୁଡ଼ିକ"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"କାର୍ଯ୍ୟଗୁଡ଼ିକ (ତିଆରି କରିବା ପାଇଁ ଖର୍ଚ୍ଚ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"କାର୍ଯ୍ୟଗୁଡ଼ିକ (ବେସ ମୂଲ୍ୟ)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ଗୋଟିଏ ଇଭେଣ୍ଟ ପ୍ରତି ପୁରସ୍କାର"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"ଇଭେଣ୍ଟର ମୋଟ ଅବଧି ପାଇଁ ପୁରସ୍କାର"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"ଦୈନିକ ସର୍ବାଧିକ ପୁରସ୍କାର"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ଶ୍ରେଷ୍ଠ କାର୍ଯ୍ୟକଳାପ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ବିଜ୍ଞପ୍ତି ଦେଖାଯାଇଛି"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ବିଜ୍ଞପ୍ତି 15 ମିନିଟ୍ ଭିତରେ ଦେଖାଯାଇଛି"</string>
@@ -5757,20 +5752,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ପ୍ରିଭ୍ୟୁ କରନ୍ତୁ"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ଏକ ସ୍କ୍ରିନ ସେଭର ବାଛନ୍ତୁ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ଅତିରିକ୍ତ ସୂଚନା ଦେଖାନ୍ତୁ"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"ସ୍କ୍ରିନ ସେଭରରେ ସମୟ, ତାରିଖ, ପାଣିପାଗ, ବାୟୁର ଗୁଣବତ୍ତା ଏବଂ କାଷ୍ଟ ବିବରଣୀ ଡିସପ୍ଲେ କରନ୍ତୁ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ଅଧିକ ସେଟିଂସ"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"ଆପଣଙ୍କ ସ୍କ୍ରିନ ସେଭର ବାଛନ୍ତୁ"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"ଆପଣଙ୍କ ଟାବଲେଟକୁ ଡକ କରାଯାଇଥିବା ସମୟରେ ଆପଣ ଆପଣଙ୍କ ସ୍କ୍ରିନରେ କଣ ଦେଖିବେ ତାହା ବାଛନ୍ତୁ। ଏକ ସ୍କ୍ରିନ ସେଭର ବ୍ୟବହାର କରାଯିବା ସମୟରେ ଆପଣଙ୍କ ଡିଭାଇସ ଅଧିକ ଏନର୍ଜି ବ୍ୟବହାର କରିପାରେ।"</string>
     <string name="customize_button_title" msgid="1110284655990203359">"କଷ୍ଟମାଇଜ କରନ୍ତୁ"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"ଫ୍ରିଫର୍ମ ସହାୟତାକୁ ସକ୍ଷମ କରିବା ପାଇଁ ଏକ ରିବୁଟ ଆବଶ୍ୟକ।"</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ସେକେଣ୍ଡାରୀ ଡିସପ୍ଲେରେ ଡେସ୍କଟପ ମୋଡକୁ ବାଧ୍ୟତାମୂଳକ ଭାବେ ଚାଲୁ କରିବା ପାଇଁ ରିବୁଟ କରିବା ଆବଶ୍ୟକ।"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ବର୍ତ୍ତମାନ ରିବୁଟ କରନ୍ତୁ"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ପରେ ରିବୁଟ କରନ୍ତୁ"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"ସ୍ପାସିଅଲ ଅଡିଓ"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"କମ୍ପାଟିବଲ ମିଡିଆରୁ ଆସିଥିବା ଅଡିଓ ଅଧିକ ଇମରସିଭ ହୋଇଥାଏ"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ହେଡ ଟ୍ରାକିଂ"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ସାଉଣ୍ଡକୁ ଅଧିକ ସ୍ୱାଭାବିକ କରିବା ପାଇଁ ଆପଣ ଆପଣଙ୍କ ମୁଣ୍ଡକୁ ମୁଭ କରିବା ସମୟରେ ଅଡିଓ ପରିବର୍ତ୍ତନ ହୁଏ"</string>
