--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"යෙදුම් භාෂා"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"එක් එක් යෙදුම සඳහා භාෂාව සකසන්න"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"යෙදුම් භාෂාව"</string>
+    <string name="warnings_title" msgid="613849105118598110">"යෙදුම යාවත්කාලීන කරන්න"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ඔබට පවතින නවතම භාෂා සඳහා යෙදුම යාවත්කාලීන කිරීමට අවශ්‍ය වේ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"දැන් යාවත්කාලීන කරන්න"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"යෝජිත භාෂා"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"සියලු භාෂා"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"පද්ධති භාෂාව"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"පද්ධති පෙරනිමිය - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"මෙම යෙදුම පෙරනිමියෙන් <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> භාෂාවට සකසා ඇති අතර බහුවිධ භාෂාවලට සහාය නොදක්වයි."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"මෙම යෙදුම සඳහා භාෂා තේරීම සැකසීම් වෙතින් ලබා ගත නොහැකිය."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ඔබට සැකසීම් වෙතින් මෙම යෙදුම සඳහා භාෂාවක් තෝරා ගත නොහැකිය."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">තෝරා ගත් භාෂා ඉවත් කරන්නද?</item>
       <item quantity="other">තෝරා ගත් භාෂා ඉවත් කරන්නද?</item>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"ඔබට සහ ඔබගේ දරුවාට සැකසීම් තුළ ඕනෑම වේලාවක සිය ඇඟිලි සලකුණු රූප සහ ආකෘතිය මැකීමට, හෝ ඇඟිලි සලකුණු අගුලු හැරීම ක්‍රියාවිරහිත කිරීමට හැකිය. ඇඟිලි සලකුණු රූප සහ ආකෘති ඔබ ඒවා මකන තෙක් දුරකථනයේ ගබඩා කර ඇත."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"යම් කෙනෙක් එය ඔබගේ ඇඟිල්ලට තබාගෙන සිටින විට වැනි, ඔබ අදහස් නොකරන විටක ඔබගේ දුරකථනය අගුලු හැරීමට හැකිය."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"යම් කෙනෙක් එය ඔවුන්ගේ ඇඟිල්ලට තබාගෙන සිටින විට වැනි, ඔවුන් අදහස් නොකරන විටක ඔබගේ දරුවාගේ දුරකථනය අගුලු හැරීමට හැකිය."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"හොඳම ප්‍රතිඵල සඳහා, සහතික කළ Google සඳහා තනන ලද තිර ආරක්ෂකයක් භාවිත කරන්න. වෙනත් තිර ආරක්ෂක සමඟ, ඔබ‍ගේ ඇඟිලි සලකුණ ක්‍රියා නොකරනු ඇත."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"හොඳම ප්‍රතිඵල සඳහා, සහතික කළ Google සඳහා තනන ලද තිර ආරක්ෂකයක් භාවිත කරන්න. වෙනත් තිර ආරක්ෂක සමඟ, ඔබ‍ගේ දරුවාගේ ඇඟිලි සලකුණ ක්‍රියා නොකළ හැකිය."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"එක් එක් අවස්ථාවේ ඔබගේ ඇඟිල්ලේ පිහිටීම මදක් වෙනස් කරන්න"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ඔබගේ ඇඟිලි සලකුණ මධ්‍යය සමගින් නිරූපකය ආවරණය කරන්න"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"ඔබේ ඇඟිලි සලකුණෙහි විවිධ කොටස් එක් කිරීමට ඔබගේ ඇඟිල්ල ඔසවා තබා ගන්න"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ඇඟිලි සලකුණු නිරූපකය චලනය වන එක් එක් අවස්ථාවේ ස්පර්ශ කර අල්ලාගෙන සිටින්න. මෙය ඔබගේ ඇඟිලි සලකුණෙහි වැඩි ප්‍රමාණයක් ග්‍රහණය කර ගැනීමට උපකාරී වේ."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ඔබගේ ඇඟිලි තුඩ සංවේදකය මත තබන්න"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"අවසානයේදී, ඔබගේ ඇඟිල්ලේ දාර භාවිත කරන්න"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ඔබ‍ගේ ඇඟිල්ලේ වම් කෙළවර තබන්න"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ඔබ‍ගේ ඇඟිල්ලේ දකුණු කෙළවර තබන්න"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ඔබගේ ඇඟිලි සලකුණුණෙහි පැත්ත සංවේදකය මත තබා අල්ලාගෙන සිටින්න, අනතුරුව අනෙක් පැත්තට මාරු වන්න"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"මෙය ඔබගේ ඇඟිලි සලකුණෙහි වැඩි ප්‍රමාණයක් ග්‍රහණය කර ගැනීමට උපකාරී වේ"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ඇඟිලි සලකුණ සියයට <xliff:g id="PERCENTAGE">%d</xliff:g>ක් ලියාපදිංචි කරමින්"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play පද්ධති යාවත්කාලීන බලපත්‍ර"</string>
     <string name="terms_title" msgid="2071742973672326073">"නියමයන් සහ කොන්දේසි"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"පද්ධති WebView බලපත"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"වෝල්පේපර ස්තුතිය"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"චන්‍ද්‍රිකා රූප සපයන්නන්:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"අත්පොත"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"අත්පොත පූරණය කිරීමේදී ගැටලුවක් ඇතිවිය."</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"සක්‍රීය කරන්න"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ගබඩාව හිස් කරන්න"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"යාවත්කාලීන අස්ථාපනය කරන්න"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"සීමා කළ සැකසීම්වලට ඉඩ දෙන්න"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ඔබ තෝරා ඇති සමහර ක්‍රියාකාරකම් පෙරනිමියෙන් මෙම යෙදුම තුළ විවෘත වේ."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"මෙම යෙදුමට විජට සෑදීමට සහ ඒවායේ දත්ත වෙත ප්‍රවේශ වීමට ඉඩ ලබා දීමට ඔබ තෝරාගෙන ඇත."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"සුපුරුදු සකසා නැත."</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"අභ්‍යන්තර ආචයනය"</string>
     <string name="recompute_size" msgid="1098091228370999128">"විශාලත්වය නැවත ගණනය කරමින්…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"යෙදුම් දත්ත මකන්නද?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"මෙම යෙදුමේ දත්ත ස්ථිරවම මකනු ඇත. මෙයට ගොනු, සැකසීම්, දත්ත සමුදායන් සහ වෙනත් යෙදුම් දත්ත ඇතුළත් වේ."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ගොනු සහ සැකසීම් ඇතුළුව, මෙම යෙදුමේ දත්ත, මෙම උපාංගයෙන් ස්ථිරවම මකනු ඇත"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"හරි"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"අවලංගු කරන්න"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"මකන්න"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"මෙම යෙදුම ස්ථාපනය කළ යෙදුම් ලැයිස්තුවෙහි සොයා නොගත්තේය."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"යෙදුම සඳහා ගබඩාව හිස් කළ නොහැකිය."</string>
@@ -3374,8 +3380,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"සකස් කර නොමැත - වැඩකරන පැතිකඩ"</string>
     <string name="user_admin" msgid="4024553191395768119">"පරිපාලක"</string>
     <string name="user_you" msgid="3070562015202859996">"ඔබ (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"ඔබට තවත් පරිශීලකයන් එක් කළ නොහැකිය. නව අයකු එක් කිරීමට පරිශීලකයෙකු ඉවත් කරන්න."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"ටැබ්ලටයේ හිමිකරුට පමණක් පරිශීලකයින් කළමනාකරණය කළ හැක."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"දුරකථනයේ හිමිකරුට පමණක් පරිශීලකයින් කළමනාකරණය කළ හැක."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"සීමිත පැතිකඩ වලට ගිණුම් එක් කළ නොහැක"</string>
@@ -4401,12 +4406,9 @@
       <item quantity="one">භාවිත නොකළ යෙදුම් <xliff:g id="COUNT_1">%d</xliff:g></item>
       <item quantity="other">භාවිත නොකළ යෙදුම් <xliff:g id="COUNT_1">%d</xliff:g></item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"භාවිත නොකළ යෙදුම් සැකසීම්"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"භාවිත නොකළේ නම් යෙදුම් ක්‍රියාකාරකම් විරාම කරන්න"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"අවසර ඉවත් කරන්න, තාවකාලික ගොනු මකන්න සහ දැනුම්දීම් නවත්වන්න"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"සියලු යෙදුම්"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ස්ථාපිත යෙදුම්"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ක්ෂණික යෙදුම්"</string>
@@ -5062,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"මෙම උපාංගය <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> මගින් කළමනාකරණය කෙරේ"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"තව දැන ගන්න"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"සීමා කළ සැකසීම"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> සඳහා සීමා කළ සැකසීම් ඉඩ දේ"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ඔබගේ ආරක්ෂාව සඳහා, මෙම සැකසීම දැනට නොමැත."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"මූල්‍යනය කළ උපාංග තොරතුරු"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ඔබගේ ණය සැපයුම්කරුට මෙම උපාංගයේ සැකසීම් වෙනස් කිරීමට සහ මෘදුකාංග ස්ථාපනය කිරීමට හැකිය.\n\nඔබට ගෙවීමක් මග හැරුණහොත්, ඔබගේ උපාංගය අගුලු දමනු ඇත.\n\nතව දැන ගැනීමට, ඔබගේ ණය සැපයුම්කරු අමතන්න."</string>
@@ -5548,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"අගුලු තිරයෙන් බාහිර උපාංග සඳහා පාලන පෙන්වන්න"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"අගුලු දැමූ උපාංගයෙන් පාලනය කරන්න"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"උපාංග පාලන යෙදුම මඟින් ඉඩ දෙන්නේ නම් ඔබගේ දුරකථනය හෝ ටැබ්ලටය අගුලු හැරීමෙන් තොරව බාහිර උපාංග පාලනය කරන්න"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"භාවිත කිරීමට, පළමුව \"උපාංග පාලන පෙන්වන්න\" ක්‍රියාත්මක කරන්න"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ලබා ගත හැකි විට ද්විත්ව රේඛා ඔරලෝසුව පෙන්වන්න"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ද්විත්ව රේඛා ඔරලෝසුව"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5565,10 +5566,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"කල් බද්ද කිසිදා කල් ඉකුත් නොවේ."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"සැකසීම්වලට තිර උඩැතිරි ඉඩ දෙන්න"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"වෙනත් යෙදුම් ඉහළින් සංදර්ශනය කළ හැකි යෙදුම්වලට සැකසීම් තිර වසාලීමට ඉඩ දෙන්න"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Mock Modem ඉඩ දෙන්න"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"උපකරණ පරීක්ෂාව සඳහා Mock Modem සේවාව ධාවනය කිරීමට මෙම උපාංගයට ඉඩ දෙන්න. දුරකථනය සාමාන්‍ය භාවිතයේදී මෙය සබල නොකරන්න"</string>
     <string name="media_controls_title" msgid="403271085636252597">"මාධ්‍ය"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"මාධ්‍ය වාදකය අමුණන්න"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"පසුධාවනය ඉක්මනින් නැවත ධාවනය ආරම්භ කිරීමට, ඉක්මන් සැකසීම් තුළ මාධ්‍ය වාදකය විවෘතව පවතී"</string>
@@ -5654,8 +5653,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"යෙදුම ඇමිණීම භාවිත කරන්න"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"සංවර්ධක විකල්ප භාවිත කරන්න"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"මුද්‍රණ සේවාව භාවිත කරන්න"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"බහු පරිශීලකයින්ට ඉඩ දෙන්න"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"රැහැන් රහිත නිදොස්කරණය භාවිත කරන්න"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"චිත්‍රක ධාවක මනාප භාවිත කරන්න"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"බැටරි සුරැකුම භාවිත කරන්න"</string>
@@ -5721,12 +5719,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"සංස්කාරක"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"ක්‍රියා (නිෂ්පාදන වියදම)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"ක්‍රියා (මූලික මිල)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"තනි සිදුවීමකට ත්‍යාග"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"මුළු සිදුවීම් කාල සීමාව සඳහා ත්‍යාග"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"දිනකට උපරිම ත්‍යාග"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ඉහළම ක්‍රියාකාරකම"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"දැනුම්දීම දකින ලදි"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"දැනුම්දීම මිනිත්තු 15ක් ඇතුළත දකින ලදි"</string>
@@ -5757,20 +5752,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"පෙරදසුන"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"තිර සුරැකුමක් තෝරන්න"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"අතිරේක තොරතුරු පෙන්වන්න"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"තිර සුරැකුමෙහි වේලාව, දිනය, කාලගුණය, වායු ගුණත්වය සහ විකාශ විස්තර සංදර්ශනය කරන්න"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"තව සැකසීම්"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"ඔබගේ තිර සුරැකුම තෝරන්න"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"ඔබගේ ටැබ්ලටය ඈඳා ඇති විට ඔබ ඔබගේ තිරය මත දකිනු ඇති දේ තෝරන්න. තිර සුරැකුමක් භාවිත කරන විට ඔබගේ උපාංගය ශක්තිය වැඩියෙන් භාවිත කළ හැකිය."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"අභිරුචිකරණය කරන්න"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"නිදහස් ආකෘති සහාය සබල කිරීමට නැවත පණ ගැන්වීමක් අවශ්‍ය වේ."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ද්විතීයික සංදර්ශකවල ඩෙස්ක්ටොප් ප්‍රකාරය බල කිරීමට නැවත පණ ගැන්වීමක් අවශ්‍ය වේ."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"දැන් නැවත පණ ගන්වන්න"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"පසුව නැවත පණ ගන්වන්න"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"අවකාශීය ශ්‍රව්‍ය"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"ගැළපෙන මාධ්‍යවලින් ශ්‍රව්‍ය වඩාත් ගිලී යයි"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"හිස සටහන් තබා ගැනීම"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ඔබ ඔබගේ හිස වඩාත් ස්වභාවික ශබ්ද වීමට ගෙන යන විට ශ්‍රව්‍ය වෙනස් වේ"</string>
