--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Mga Wika ng App"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Itakda ang wika para sa bawat app"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Wika ng App"</string>
+    <string name="warnings_title" msgid="613849105118598110">"I-update ang app"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Kailangan mong i-update ang app para sa pinakabagong available na wika"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"I-update ngayon"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Mga iminumungkahing wika"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Lahat ng wika"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Wika ng system"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Default ng system - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Nakatakda ang app sa <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> bilang default at hindi nito sinusuportahan ang maraming wika."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Hindi available sa Mga Setting ang pagpili ng wika para sa app na ito."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Hindi ka puwedeng pumili ng wika para sa app na ito mula sa Mga Setting."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Alisin ang mga piniling wika?</item>
       <item quantity="other">Alisin ang mga piniling wika?</item>
@@ -454,6 +458,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Magagawa mo at ng iyong anak na i-delete ang mga larawan at modelo ng kanyang fingerprint, o i-off ang Pag-unlock Gamit ang Fingerprint anumang oras sa Mga Setting. Naka-store ang mga larawan at modelo ng fingerprint sa telepono hanggang sa i-delete ang mga ito."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Puwedeng ma-unlock ang iyong telepono nang hindi sinasadya, gaya kung may magtapat nito sa daliri mo."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Puwedeng ma-unlock ang telepono ng iyong anak nang hindi niya sinasadya, gaya ng kapag may taong naglapat nito sa kanyang daliri."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Para sa pinakamahuhusay na resulta, gumamit ng screen protector na certified ng Made for Google. Posibleng hindi gumana ang iyong fingerprint gamit ang iba pang screen protector."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Para sa pinakamahuhusay na resulta, gumamit ng screen protector na certified ng Made for Google. Posibleng hindi gumana ang fingerprint ng iyong anak gamit ang iba pang screen protector."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Bahagyang baguhin ang posisyon ng iyong daliri sa bawat pagkakataon"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Takpan ang icon gamit ang gitnang bahagi ng iyong fingerprint"</string>
@@ -507,7 +513,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Iangat nang iangat ang iyong daliri para idagdag ang iba\'t ibang bahagi ng fingerprint mo"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Pindutin nang matagal sa tuwing gagalaw ang icon ng fingerprint. Makakatulong itong mas makuha ang iyong fingerprint."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Ilagay ang tip ng iyong daliri sa sensor"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Panghuli, gamitin ang mga edge ng iyong daliri"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Iposisyon ang kaliwang gilid ng iyong daliri"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Iposisyon ang kanang gilid ng iyong daliri"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Ilagay ang gilid ng iyong fingerprint sa sensor nang matagal, pagkatapos ay ang kabilang gilid"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Makakatulong itong mas makuha ang iyong fingerprint"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Pag-enroll ng fingerprint: <xliff:g id="PERCENTAGE">%d</xliff:g> porsyento"</string>
@@ -1315,7 +1322,7 @@
     <string name="accelerometer_summary_on" product="default" msgid="7117139542131700779">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="3747370091309939684">"Awtomatikong ilipat ang oryentasyon kapag iniikot ang tablet"</string>
     <string name="accelerometer_summary_off" product="default" msgid="4451125241783158763">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
-    <string name="brightness" msgid="6216871641021779698">"Antas ng brightness"</string>
+    <string name="brightness" msgid="6216871641021779698">"Level ng brightness"</string>
     <string name="brightness_title" msgid="5457874893085305155">"Brightness"</string>
     <string name="brightness_summary" msgid="6309641759293018049">"Ayusin ang liwanag ng screen"</string>
     <string name="auto_brightness_title" msgid="4239324728760986697">"Adaptive brightness"</string>
@@ -1905,8 +1912,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Lisensya ng pag-update ng system ng Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Mga Tuntunin at kondisyon"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Lisensya ng System WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Mga credit sa wallpaper"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Mga provider ng koleksyon ng imahe na galing sa satellite:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Nagkakaproblema sa paglo-load sa manual."</string>
@@ -2057,8 +2063,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Paganahin"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"I-clear ang storage"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"I-uninstall ang mga pag-update"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Payagan ang mga pinaghihigpitang setting"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Nagbubukas sa app na ito bilang default ang ilan sa mga napili mong aktibidad."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Pinili mong payagan ang app na ito na lumikha ng mga widget at i-access ang data ng mga ito."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Walang nakatakdang mga default."</string>
@@ -2093,9 +2098,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Panloob na storage"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Muling kino-compute ang laki…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"I-delete ang data ng app?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Permanenteng made-delete ang data ng app na ito. Kasama rito ang mga file, setting, database, at iba pang data ng app."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Permanenteng made-delete sa device na ito ang data ng app na ito, kabilang ang mga file at setting"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"OK"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Kanselahin"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"I-delete"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Hindi natagpuan ang app sa listahan ng naka-install na apps."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Hindi ma-clear ang storage para sa app."</string>
@@ -4401,8 +4407,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> na hindi ginagamit na app</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Mga setting ng hindi ginagamit na app"</string>
-    <string name="unused_apps_switch" msgid="2979882622987847195">"I-pause ang aktibidad ng app"</string>
-    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Alisin ang mga pahintulot, i-delete ang mga pansamantalang file, at ihinto ang mga notification kung hindi ginagamit"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"I-pause ang aktibidad sa app kung hindi ginagamit"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Alisin ang mga pahintulot, i-delete ang mga pansamantalang file, at ihinto ang mga notification"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Lahat ng app"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Mga naka-install na app"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Mga instant na app"</string>
@@ -5058,10 +5064,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Pinamamahalaan ng <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ang device na ito."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Matuto pa"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Pinaghihigpitang setting"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Pinapayagan sa <xliff:g id="APP_NAME">%s</xliff:g> ang mga pinaghihigpitang setting"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Para sa iyong seguridad, hindi available ang setting na ito sa ngayon."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Impormasyon ng pinopondohang device"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Mababago ng iyong credit provider ang mga setting at makakapag-install ito ng software sa device na ito.\n\nKung may mapalampas kang bayad, mala-lock ang device mo.\n\nPara matuto pa, makipag-ugnayan sa iyong credit provider."</string>
@@ -5544,6 +5548,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Ipakita ang mga kontrol para sa mga external na device mula sa lock screen"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Kontrol mula sa naka-lock na device"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Kontrolin ang mga external na device nang hindi ina-unlock ang iyong telepono o tablet kung pinapayagan ng app na mga kontrol ng device"</string>
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Para magamit, i-on muna ang \"Ipakita ang mga kontrol ng device\""</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Ipakita ang orasang may dalawang linya kapag available"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Orasang may dalawang linya"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
